--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,150 +1,29 @@
 ---
-title: 两年来，CDC无视数据，甚至撒谎,将自然免疫当成阴谋论
+title: 耶！伦敦法官对UBS三案齐立，“沼泽地“与”沼泽地“的终极对决
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1981794/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1981887/)
 
-[https://gtv.org/video/id=6204153b585ecc15d73f7d61](https://gtv.org/video/id=6204153b585ecc15d73f7d61)
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-Rep. Thomas Massie
-托马斯·马西议员
+2月9日，郭文贵先生于GTV、Gettr大直播中突然长耶一声，公布了一个振奋人心的好消息，即起诉UBS（瑞银集团）的官司被伦敦法官正式立案。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/ezgif.com-gif-maker-2.jpg)图片来源路透社
 
-One of the biggest scandals during this whole pandemic, is the cover up
-在整个大流行期间, 最大的丑闻之一就是掩盖
 
-That’s been committed by Fauci and the CDC, especially the CDC
-福奇和疾病预防控制中心已经承认，尤其是疾病预防控制中心
+走到这一步，付出了7年。这是对世界邪恶“沼泽地”的第一仗，也是闯过的最重要一关。
 
-about the effectiveness of immunity that’s conferred after a natural infection
-关于自然感染后赋予的免疫力的有效性
+英国法官公义又独立的判决，使得爆料革命进入一个新阶段，但对UBS（瑞银集团）来说是一个重大打击。只要法官立案，就说明起诉UBS（瑞银集团）是有事实依据的，承认有索赔的事实。到时候，UBS（瑞银集团）必须提供和郭先生之间的所有信息，以及必须提供替中共高官存钱的信息。
 
-after you recover from that
-在你从自然感染中恢复后
+UBS（瑞银集团）曾为了躲掉这个案子辞退涉事高管，并禁止这些高管去伦敦，甚至关掉分行想金蝉脱壳。因为UBS（瑞银集团）是世界“沼泽地”力量核心利益的核心，其中黑金存款达**一百万亿**美元，是过去人类几百年财富的集合点，大名鼎鼎的罗斯柴尔德家族在UBS（瑞银集团）的财富只排到第三位（瑞士、列支敦士登和卢森堡，藏匿了人类99.999%的人类财富）。对手实力的强大超出想象，甚至当初没有律师敢协助起诉UBS（瑞银集团），UBS（瑞银集团）提前布局早已把全世界的知名律师签约收买。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture1111.jpg)Bloomberg（彭博社）报道，伦敦的法官表示可以监督此案，因为伦敦是有害事件发生的地方，而UBS（瑞银集团）的伦敦部门充分而明显地参与了构成索赔行动的几个要素。”
 
-they’ve completely ignored that
-他们完全忽略了这一点
 
-They want everybody to get vaccinated
-他们希望每个人都接种疫苗
+如今伦敦法官驳回UBS（瑞银集团）对于管辖权的申诉，并且三案齐立。至此，爆料革命终于打开了邪恶“沼泽地”和中共勾兑的大门。随着新冠病毒和新冠毒疫苗的真相与这些藏匿在UBS（瑞银集团）的黑金被揭露，是邪恶“沼泽地”力量希望更多的普通民众隐蔽的死去，届时没人再去关心银行的理财产品和亏空的社保基金。
 
-even those who don’t need vaccinated
-即使是那些不需要接种疫苗的人
+中国源远流长的历史长河累积的巨额财富成为UBS（瑞银集团）最大的黑金来源，而这些财富本就属于中国必须归还给中国人民。如果能把海外属于中国人民的50万亿美元财富找回，不但可以轻松偿还所有中国人民欠下的房屋贷款和信用卡欠款，还能享受免费的教育和免费的墓地。这些年，中国劳动人民被榨取的太惨。
 
-and the science if you follow the science on this
-关于科学，如果你遵循这方面的科学
+案子的成功立案，直插世界黑暗势力的总部，而中共会成为最终的对决方。人类的“沼泽地“力量，就是背后负责印发钞票、控制供应链和股市的，世界游戏规则的制定者。
 
-The Moderna trial showed there was no benefit of the vaccine to those who recov-ered from infection
-莫德纳试验表明，疫苗对那些从感染中恢复过来的人没有好处
-
-The Pfizer trial showed there was no benefit to those who had recovered from in-fection from the vaccine
-辉瑞的试验表明，疫苗对那些从病毒感染中恢复过来的人没有任何好处
-
-A recent study with 52,000 people at the Cleveland Clinic
-最近在克利夫兰诊所对52,000人进行的一项研究表明
-
-300 plus of whom did not receive the vaccine
-其中1300多人没有接种疫苗
-
-but had prior infection showed that none of them got reinfected, symptomatically
-但之前曾经感染过，结果表明他们没有人再次感染，或有症状
-
-and then if you want to compare the efficacy of immunity from recovering from COVID to that of the vaccine
-然后如果你想比较从 COVID 中恢复的免疫力与疫苗的功效
-
-the biggest study out there is the whole country of Israel
-最大的研究的国家是整个以色列
-
-Tel Aviv University, 6 million participants in this study, 6 million data points
-以色列特拉维夫大学的600万参与者参与了这项研究，600 万个数据点
-
-And it showed there’s virtually no difference actually is it showed a little bit
-它表明实际上几乎没有差异，它显示了一点
-
-but probably not statistically significant, a little bit better
-但可能没有统计学意义，对自然感染的免疫力要好一点
-
-immunity from natural infection and before you all report this
-在你们所有人报告之前
-
-I’m not saying go out and get the virus instead of getting the vaccine
-我不是说出去感染病毒而不去接种疫苗
-
-The vaccine can save lives and certain
-疫苗可以挽救生命和肯定的
-
-but there’s no need, the science shows this
-但没必要，科学证明了这一点
-
-There’s no need to get the vaccine if you’ve already recovered from COVID
-如果您已经从COVID中康复，则无需接种疫苗
-
-And then there’s no need to expose yourself to that danger
-然后就没有必要让自己暴露在那种危险之中
-
-The CDC knows this, they admitted to me on a recorded phone call
-疾病预防控制中心知道这一点，他们通过录了音的电话向我承认了这一点
-
-I’ll be glad to give you that they knew they were misreporting the results of the Pfizer data
-我很高兴告诉你他们知道他们误报了辉瑞数据的结果
-
-Reporter
-记者
-
-Number one you didn’t answer whether or not you’ve been vaccinated
-第一个你没有回答你是否接种过疫苗
-
-Rep. Thomas Massie
-托马斯·马西议员
-
-Well first of all, it’s none of your business
-好吧，首先，这不关你的事
-
-But I’m going to tell you, I’m not vaccinated
-但我要告诉你，我没有接种疫苗
-
-And until there’s some science
-直到有一些科学依据
-
-by the way I have a Master’s of Science degree from MIT
-顺便说一句，我拥有麻省理工学院的理学硕士学位
-
-I’m not a virologist, but I can read data
-我不是病毒学家，但我可以读取数据
-
-Everybody just needs to read it
-每个人只需要阅读它
-
-Don’t put your head in the sand. Look at the data.
-不要把头埋在沙子里，看看数据
-
-I’m not going to get the vaccine until there’s data that shows
-我不会接种疫苗，直到有数据表明
-
-that it will improve upon the immunity
-它会提高免疫力
-
-that’s been conferred to me as a result of a natural infection that I had
-由于我的一次自然感染，而我被授予了这一权利
-
-**原视频链接**[:](https://twitter.com/repthomasmassie/status)[https://twitter.com/repthomasmassie/status](https://twitter.com/repthomasmassie/status)
-
-Date:02/06/2022
-原视频标题: For 2 years, CDC ignored the data and even lied about it to treat natural immunity like a conspiracy theory
-两年来，CDC无视数据，甚至撒谎，将自然免疫当成阴谋论
-原视频日期：2022/02/08
-原视频链接https://twitter.com/repthomasmassie/status/1490783499883847680?s=24
-任务编号：KE392(3699)
-视频时间段 : 0:00-2:34
-
-英听校：洛杉矶盘古农场 – Layka
-翻译：洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场-天涯行
-审片：洛杉矶盘古农场- 银龙
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+现在“沼泽地“力量分属两大阵营，一部分跟我们新中国联邦一起，一部分跟我们新中国联邦为敌。多言无益，战一把试试。
 
  
 
