--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,35 +1,30 @@
 ---
-title: 中共国地方债窟窿庞大，借新还旧难以为继
+title: 美41位参议员敦促贸易代表建立全面对华关税程序
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1981771/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1981883/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+**撰稿：日本东京方舟农场  幽蘭自得**
 
-整理：Eileen（围剿维尼熊）
-编辑：文泓
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-614.png)
-据凤凰网2月9日报道，近日，中共国财政部通报2021年地方政府债券发行和债务余额情况。
+据《美国之音》2月9日报道，美国四十一位跨党派的联邦参议员致函美国贸易代表戴琪(Katherine Tai)，敦促她建立一个更全面的程序，将一些中共国进口产品排除在惩罚性的关税之外。这些参议员表示，这不仅会缓解这些关税给美国商家带来的负面影响，而且会使它们有更多的时间和资源把供应链转移出中国并使制造业回流美国。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-149.jpg)图为2019年6月美中贸易战期间，洛杉矶港堆放的集装箱（图片来自Frederick J. Brown/AFP via Getty Images）
+据报道，以俄亥俄州共和党籍参议员罗布·波特曼(Rob Portman)和特拉华州民主党籍参议员汤姆·卡珀(Tom Carper)领衔的41位参议员2月7日在信中表示，他们强烈支持为美国制造商、生产商和进口商有关减免对中共国产品征收的关税的申请建立一个全面的程序。
 
-**2021****年1-12月**，全国发行新增债券43709亿元；全国发行再融资债券31189亿元，**合计全国发行地方政府债券74898亿元。**
+这些参议员认为，在新冠疫情还在持续的情况下，这个关税排除程序的“狭隘性质”，“可能会阻止陷入困境的企业和制造商获得他们迫切需要的救济”。他们说，根据最初的排除程序，只有1%的进口产品有资格得到考虑。
 
-地方政府债券平均发行期限11.9年，其中一般债券7.7年，专项债券14.2年。地方政府债券平均发行利率3.36%，其中一般债券3.26%，专项债券3.41%。
+“我们认为，为受关税影响的企业提供一个申请有限但可延续的关税减免机会的全面性的排除程序，是我们反击中（共）国不公平贸易做法战略中一个有价值的组成部分，”他们在信中写道。“除了减轻关税对美国企业的负面影响外，它还将让这些企业有更多的时间和资源，将供应链移出中（共）国，并将制造业重新带回美国。”
 
-**2021****年1-12月，地方政府债券到期偿还本金26685亿元，其中发行再融资债券偿还本金23019亿元**、安排财政资金等偿还本金3666亿元。地方政府债券支付利息9280亿元。
+他们认为，重启一个全面性的关税排除程序既可以使美国继续对中共施压，同时也可以减轻关税给美国商家和工人带来的经济痛苦。
 
-**截至2021年12月末，全国地方政府债务余额304700亿元。**其中，一般债务137709亿元，专项债务166991亿元。政府债券303078亿元，非政府债券形式存量政府债务1622亿元。地方政府债券剩余平均年限7.8年，其中一般债券6.3年，专项债券9.0年；平均利率3.51%，其中一般债券3.51%，专项债券3.51%。
+不过，拜登总统1月20日在一次记者会上曾表示，他知道有些商业团体正强烈要求他开始降低川普政府对中共国商品征收的关税，而且美国贸易代表戴琪正在就这个议题进行努力，但他同时表示，解除对中共国商品的关税的时机还未成熟。
 
-天量的地方债窟窿，经济濒于崩溃，中共拿什么来弥补？唯一的办法就是稀释十四亿人民的财富，开动印钞机“借新还旧”、继续量化宽松。
+川普政府2018年根据1974年《贸易法》第301条的规定开始对价值3千多亿美元的中共国产品加征惩罚性的关税。尽管美中双方在2020年1月签署了第一阶段贸易协议，并批准了对一些产品进行关税豁免，但是相当一部分的关税并未取消。拜登政府上台后，美国贸易代表办公室对美中贸易关系进行了全面的审议，并在去年10月4日宣布对中共国产品恢复“有针对性的、潜在的”关税排除程序。
 
-参考链接：[截至去年12月末 全国地方政府债务余额304700亿](https://i.ifeng.com/c/8DUqhYSP6HL)
+参考链接：
+[https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html](https://www.voachinese.com/a/us-china-trade-tariffs-20220208/6433060.html)
 
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
