--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,17 +1,40 @@
 ---
-title: 忘掉痛苦，不懂感恩！必有更大的灾难！
+title: 单伟建用虚假无担保票据大肆攫金
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1981767/)
+`加拿大温哥华扬帆农场 Himalaya Sailing Farm (CA)` [轉載自GNews](https://gnews.org/zh-hans/1981874/)
 
-北京时间2月9日晚，在文贵先生的直播中提到一个善于遗忘，忘掉痛苦与灾难，而内心不懂感恩的民族，未来必定会有更大的灾难在等着你！
+加拿大温哥华扬帆农场 薇文viven
 
-在中共统治下，太多的中国人总是那么的善于遗忘，无法铭记苦难不去深思。正如文贵先生所说，车祸一星期忘掉，六四天安门事件三星期忘掉，香港万人被奸被杀不超过三个月忘掉，郑州水灾不超过半年忘掉……
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/a-7-edited.png)图片来源：asia times
 
-灾难或许并不可怕，总有渡过的办法，真正可怕的是遗忘，让灾难一次次的重演！中共给中国人灌输了太多的仇恨教育，由于仇恨，不懂感恩，由于仇恨变得暴虐麻木，总是那么的不去深思。仇恨教育下人们怀疑的太多，信任的太少，孤单冷漠猜疑，凡是事不关己，没有必要去铭记，遗忘反而是种洒脱！
 
-相对于仇恨教育，我们缺少太多的勇敢教育。勇于担当，勇于探索，勇于挑战，勇于在错误中反思……仇恨让人狭隘而自私，勇敢让人包容而博爱！让我们多一些勇敢，少一些仇恨，中共灭了，未来一切都会慢慢变好！
+单伟建用虚假的担保票据，从 “PAG 太盟集团”攫取资金，倒手到自己名下的上市公司。
 
-撰稿/发布：一叶知秋
+单伟建 2021年4月在开曼群岛注册成立了一家名为“戈壁收购”的空壳公司，随即在纳斯达克上市。承销商三家：花旗银行 (Citibank)、高盛亚洲 (Goldman Sachs (Asia) L.L.C. ) 和瑞银投资 (UBS Investment Bank) 。
+
+上市后共募集资金约$2.87亿美元，其中包括三大承销商超额配售的 $542.5万美元，全部进入单伟建的私人信托账户，委托美国新成立的“大陆股票转让&信托公司” (Continental Stock Transfer & Trust Company)进行管理，没留一分钱给“戈壁收购”。“戈壁收购”如何维持经营?
+
+1、“戈壁收购” 发行 “无担保票据” 给 PAG 太盟集团，立即套现 $100万美元，支付管理人员薪酬。这一票据无利息，若“戈壁收购”在两年内无法实现借壳上市的发行目的，则无需偿还欠款， “太盟集团”将全部免除其债务。
+
+2，”戈壁收购“向“太盟集团”出售10,851份 “私募认股权证” ，为公司带来了10.85万美元的进账，作为公司维护费用。
+
+“PAG 太盟集团” 将这些债务以“内保外贷”形式，通过国内金融机构，转嫁到中国老百姓身上。此外 “PAG 太盟集团” 还从投资国内各行业获得巨额利益。
+
+郭文贵先生揭露盗国贼们玩巨额的虚假票据游戏，这只是九牛一毛。每个中国百姓身上都插着抽血管，财富被多重抽吸，通过无数像“戈壁收购”这样的公司，流入这些盗国贼家的私人信托账户，背上的是子子孙孙还不完的沉重债务。
+
+不灭中共，天理难容！
+
+参考资料：
+
+[https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm](https://www.sec.gov/Archives/edgar/data/0001854593/000110465921047559/filename1.htm)
+
+[https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1\_8k.htm](https://www.sec.gov/Archives/edgar/data/1854593/000110465921093691/tm2122403d1_8k.htm)
+
+[INVESTMENT MANAGEMENT TRUST AGREEMENT](https://contracts.justia.com/companies/gobi-acquisition-corp-13143/contract/186384/)
+
+* * *
+
+编译撰稿：薇文viven 编辑发稿：硫酸羟氯喹64
 
  
 
