--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,49 +1,22 @@
 ---
-title: Gov DeSantis 抨击科学在口罩方面发生了变化
+title: 梵蒂冈支持加拿大卡车司机反疫苗护照运动
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1982111/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1982199/)
 
-2022-02-09
+采编/编译撰稿： 苦尽甜来 (文來）                      校对编辑：硫酸羟氯喹64
 
-立宪之人 美国新闻
-翻译：沉默老歌
-![](https://assets.gnews.org/wp-content/uploads/2022/02/VP6T7G_XRET_HFV462.png)图片来源：https://www.epochtimes.com/
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/Archbishop_Carlo_Maria_Vigano-810x500-1-edited.jpg)图片来源：lifesitenews
 
 
-> NEW – Florida Gov. DeSantis says the "medical science didn't change" on mask mandates, "the political science changed."[pic.twitter.com/HllBoVDAEk](https://t.co/HllBoVDAEk)
-> — Disclose.tv (@disclosetv) [February 8, 2022](https://twitter.com/disclosetv/status/1491157146041421824?ref_src=twsrc%5Etfw)
+据美国媒体【生命新闻】2月7日报道，梵蒂冈红衣大主教维加诺在致加拿大所有参加反抗疫苗护照运动卡车司机的信中指出，人们已更加清晰地看见全球主义恶棍精英利用疫情，在全球开启了反人类的灭顶灾难。
 
+维迦诺在信中说：“亲爱的加拿大卡车司机朋友，你们加入了一个世界范围的团体，来对抗那些希望通过世界经济论坛来统治世界的邪恶势力。加拿大，澳大利亚、意大利、奥地利和法国等都是全球主义政客渗透最深的国家。在这个地狱般的大重启计划中，我们不仅要考虑到疫情灾难，还要防止这些精英对其国家民主，自由和宗教的破坏。”
 
+报道称，红衣大主教深深体会卡车司机们面临的巨大困难，包括放弃工作，恶劣天气条件、漫长的黑夜以及被当局逮捕的威胁。并因此诚恳表达其支持和赞誉。同时，维迦诺将为反抗者们祈祷，希望在加拿大的示威行动获得成功，并尽可能扩展到其他国家。
 
-佛罗里达州州长德桑蒂斯今天抨击了这样一种观点，即随着民主党各州的州长正在取消他们的口罩授权，戴口罩的科学已经发生了变化。他是这样说的：
+发稿：文明(添草灭共)
 
-你现在在其他州和全国各地听到很多关于“哦，我们要取消对这些小孩的口罩要求”的喋喋不休的声音，好像他们突然顿悟了一样，甚至有些人认为科学已经发生改变了。
-
-让我告诉你，科学并没有改变一丁点。
-
-我们从一开始就知道，这就是为什么佛罗里达州从未对学童强制实施口罩政策；这就是为什么我们努力将孩子们从地方层面的强制口罩中解放出来，因为这从来没有正当理由。
-
-如果你看看无用的疾控中心和拜登政府所做的，它们在世界其他地方都是异常人。如果你看看所有的工业化国家，没有一个国家像美国政府那样在强迫儿童戴口罩方面绝对疯狂。
-
-我很自豪地说，在佛罗里达州，我们勇敢地面对拜登政府，我们与父母站在一起，我们与孩子们的福祉站在一起。我可以告诉你，这些孩子每天不用戴八个小时的口罩就能上学，这要让他们开心得多。
-
-因此，当您开始看到他们重新评估或说出所有这一切时，请理解这一点。科学没有改变，是的，医学没有改变，政治学改变了。他们感受到了炙热，他们知道选民已经厌倦了长久的封锁政策，他们知道他们基本上没有提供任何出路，他们知道他们正在努力修复民意调查中的惨败，所以这就是导致顿悟的原因。
-
-但事实是，如果他们从一开始就研究实际科学，他们就会知道这是佛罗里达州的正确做法。
-
-德桑蒂斯是在这方面发言的完美州长，因为他是极少数有勇气挑战口罩精神病、并从一开始就与科学站在一起的人之一。佛罗里达州比许多州更能抵御 COVID，尤其是拥有如此多的老年人口。
-
-州长桑德斯的帖子抨击了科学在口罩方面发生了变化的想法…… [视频]首次出现在News Thud上。
-
-来源链接：[Gov DeSantis BLASTS the idea that the science changed on masking… \[VIDEO\]](https://ussanews.com/gov-desantis-blasts-the-idea-that-the-science-changed-on-masking-video/)
-
-编辑：LILY
-发布：肥鯮
-
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
-
+原文链接：[Abp. Viganò endorses Canadian truck drivers, calls for prayers to defeat ‘infernal’ Great Reset – LifeSite (lifesitenews.com)](https://www.lifesitenews.com/opinion/abp-vigano-endorses-canadian-truck-drivers-may-your-efforts-be-crowned-with-success/)
 
  
 
