--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,21 +1,60 @@
 ---
-title: 针下亡魂｜希腊 21 岁足球运动员接种疫苗后死亡
+title: 中国共产党是一个鲁莽、不人道、不负责任的政权
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/1982043/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1982157/)
 
-**撰文/ 疫情关注组｜发布日期/ 10/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2021/10/New-Looks-In-Autumn-Style123445_2.jpg)
-**更多资讯请关注官方盖特（Please follow our Gettr：[https://gettr.com/post/pl6k0218bf](https://gettr.com/post/pl6k0218bf)）**
+参议员玛莎.布莱克本： 中国共产党是一个鲁莽、不人道、不负责任的政权。 他们不应该获得世界舞台来举办今年的奥运会。
 
-隶属于伊利乌波利具乐部的希腊 21 岁足球运动员 Alexandros Lampis ，在本月初（2日）对阵 Ermionida 的比赛中，即开场14分钟时，因心脏骤停而倒在赛场上。
 
-最令人遗憾的是，由于当时体育场内并没有除颤器可用，Alexandros 足足等了 20 分钟，才等到救护车赶到。之后不久，伊利乌波利具乐部在官网宣布了Alexandros 的死讯。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpeg)
+> The Chinese Communist Party is a reckless, inhumane, and irresponsible regime. 
+> 
+> They should have never been given the world stage to host this year’s Olympic Games.
+> — Sen. Marsha Blackburn (@MarshaBlackburn) [February 9, 2022](https://twitter.com/MarshaBlackburn/status/1491548314034130946?ref_src=twsrc%5Etfw)
 
-根据希腊当局的防疫规定，获得上场比赛资格的运动员必须接种 COVID-19 疫苗。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/希臘-21-歲足球運動員接種疫苗後死亡.jpg)
-来源｜[TheSun](https://www.thesun.co.uk/sport/17524888/alexandros-lampis-dies-21-greek-footballer-cardiac-arrest/)
+
+
+众议员马乔丽·泰勒·格林： 几十年来，美国政客出卖了美国，用他们的爱国主义换取中国的财富。 这张肮脏的中国奥运会的图片概括了这一切。 美国必须做出选择。 不要再和中国共产党打交道，把出卖我们国家的叛徒赶出去。
+
+
+
+> For decades US politicians have sold out America and traded their patriotism for riches from China.
+> 
+> This picture of the filthy Olympics in China sums it all up.
+> 
+> America must make a choice. 
+> 
+> No more deals with the CCP and throw out the traitors who sell out our country. [pic.twitter.com/55gx4em0WQ](https://t.co/55gx4em0WQ)
+> — Rep. Marjorie Taylor Greene (@RepMTG) [February 9, 2022](https://twitter.com/RepMTG/status/1491450892897644549?ref_src=twsrc%5Etfw)
+
+
+
+前国务卿迈克.蓬佩奥： 俗话说，自由不是免费的。 它只给那些为保护它而愿意付出有时是沉重代价的人们。
+
+
+
+> Freedom is not free, as the saying goes. It is only for those who are willing to bear the sometimes-difficult price of preserving it.
+> — Mike Pompeo (@mikepompeo) [February 9, 2022](https://twitter.com/mikepompeo/status/1491414576436748298?ref_src=twsrc%5Etfw)
+
+
+
+参议员卢比奥新闻办公室： 参议员卢比奥、布莱克本和泰尼，提出了《排除中国共产党意外方法案》，该法案将指导证监会，要求在美国交易所上市的公司确认其运营中是否存在中共组织。
+
+
+
+> Sen Rubio, Sen [@MarshaBlackburn](https://twitter.com/MarshaBlackburn?ref_src=twsrc%5Etfw) & [@RepTenney](https://twitter.com/RepTenney?ref_src=twsrc%5Etfw) introduced the No Chinese Communist SURPRISE Parties Act, which would direct the [@SECGov](https://twitter.com/SECGov?ref_src=twsrc%5Etfw) to require companies listed on U.S. exchanges to identify whether a [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw) organization is present in the firm’s operations.[https://t.co/tq0DSBhp0H](https://t.co/tq0DSBhp0H)
+> — Senator Rubio Press (@SenRubioPress) [February 9, 2022](https://twitter.com/SenRubioPress/status/1491464790308495361?ref_src=twsrc%5Etfw)
+
+
+
+比尔·格茨: [#中共国](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E5%9B%BD?src=hashtag_click) 经济衰退威胁最高领袖 [#习近平](https://twitter.com/hashtag/%E4%B9%A0%E8%BF%91%E5%B9%B3?src=hashtag_click) 的重振新毛贼东共产主义政策。
+
+
+
+> China’s economic downturn threatens supreme leader Xi Jinping’s policy of reimposing neo-Maoist communism [https://t.co/0iuq5ZmPEj](https://t.co/0iuq5ZmPEj)
+> — Bill Gertz (@BillGertz) [February 10, 2022](https://twitter.com/BillGertz/status/1491594617573105665?ref_src=twsrc%5Etfw)
+
+
 
  
 
