--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,41 +1,50 @@
 ---
-title: 诺贝尔医学奖得主 Luc Montagnier 教授去世的消息未被证实
+title: Gov DeSantis 抨击科学在口罩方面发生了变化
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1981981/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1982111/)
 
-撰稿：小雨
-![](https://assets.gnews.org/wp-content/uploads/2022/02/FWU374ZYKL66EM5YPUEIP2IDCQ-1.jpg)网络图片
-12小时之前，社交媒体上传播着2008 年诺贝尔医学奖得主 Luc Montagnier 教授过世的消息。但到目前为止，还没有官方消息或其他法国和国际媒体证实这一消息。
+2022-02-09
 
-法国网站France Soir在Twitter2 月9日上发布如下推文：
+立宪之人 美国新闻
+翻译：沉默老歌
+![](https://assets.gnews.org/wp-content/uploads/2022/02/VP6T7G_XRET_HFV462.png)图片来源：https://www.epochtimes.com/
 
-“*2008 年诺贝尔医学奖得主 Luc Montagnier 教授于 2022 年 2 月 8 日在他的孩子们面前安详地去世。*
-*1932 年 8 月 18 日 – 2022 年 2 月 8 日*
 
-*愿这位伟人的灵魂安息！*”
+> NEW – Florida Gov. DeSantis says the "medical science didn't change" on mask mandates, "the political science changed."[pic.twitter.com/HllBoVDAEk](https://t.co/HllBoVDAEk)
+> — Disclose.tv (@disclosetv) [February 8, 2022](https://twitter.com/disclosetv/status/1491157146041421824?ref_src=twsrc%5Etfw)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-971.png)[推特链接](https://twitter.com/france_soir/status/1491361948407336971)
 
-网站France Soir在几小时后发布了一篇悼文：
 
-*Luc Montagnier 教授（1932 年 8 月 18 日 – 2022 年 2 月 8 日），在塞纳河畔纳伊的美国医院去世，享年89岁。教授最忠实的合作者之一 Gérard Guillaume 医生告诉我们，Luc Montagnier 教授在孩子们的陪伴下平静地离开了。*
+佛罗里达州州长德桑蒂斯今天抨击了这样一种观点，即随着民主党各州的州长正在取消他们的口罩授权，戴口罩的科学已经发生了变化。他是这样说的：
 
-*Luc Montagnier 教授是一位生物学家和病毒学家，最重要的是，教授还是一位为科学而活的具有非凡智慧的人。除了因发现艾滋病病毒而获得 2008 年诺贝尔医学奖外，教授还与世界上最伟大的科研机构一起工作。Luc Montagnier 教授担任 CNRS名誉研究主任，巴斯德研究所教授，纽约城市大学皇后学院分子与细胞生物学中心主任，上海交通大学研究所所长。多年来，Luc Montagnier 教授通过研究支持了科学院和美国国家医学院。为此，他获得了无数的奖项和荣誉。*
+你现在在其他州和全国各地听到很多关于“哦，我们要取消对这些小孩的口罩要求”的喋喋不休的声音，好像他们突然顿悟了一样，甚至有些人认为科学已经发生改变了。
 
-*尽管Luc Montagnier 教授年事已高，尽管他在人生的晚年遭受了所有批评，尤其是来自科学界的一部分，但教授一直为自由科学而奋斗。我们很幸运能够在 FranceSoir 多次接待他，并希望将所有荣誉都授予他。*
+让我告诉你，科学并没有改变一丁点。
 
-曾邀请Luc Montagnier 教授参加米兰示威活动的参议员 Gianluigi Paragone 在他的 Facebook 个人资料中谈到了这件事。他表示对此也知之甚少或一无所知：“我无法确认或否认。我只知道几天来我们一直试图与他的随行人员取得联系，但我们没有成功。”
+我们从一开始就知道，这就是为什么佛罗里达州从未对学童强制实施口罩政策；这就是为什么我们努力将孩子们从地方层面的强制口罩中解放出来，因为这从来没有正当理由。
 
-**简评：**
+如果你看看无用的疾控中心和拜登政府所做的，它们在世界其他地方都是异常人。如果你看看所有的工业化国家，没有一个国家像美国政府那样在强迫儿童戴口罩方面绝对疯狂。
 
-今天读到此消息，只有震惊，也有不少的猜想。过去两年中，高龄的Luc Montagnier 教授到处奔波做演讲和接受采访，宣传病毒和疫苗的真相，用自己的学术声望去试图唤醒被洗脑的民众。我们钦佩Luc Montagnier 教授的学识和人品，从教授身上我们看到一个真正尊重科学和真理的学者和科学家。
+我很自豪地说，在佛罗里达州，我们勇敢地面对拜登政府，我们与父母站在一起，我们与孩子们的福祉站在一起。我可以告诉你，这些孩子每天不用戴八个小时的口罩就能上学，这要让他们开心得多。
 
-希望是虚惊一场。无论如何，我们为Luc Montagnier 教授祈祷。
+因此，当您开始看到他们重新评估或说出所有这一切时，请理解这一点。科学没有改变，是的，医学没有改变，政治学改变了。他们感受到了炙热，他们知道选民已经厌倦了长久的封锁政策，他们知道他们基本上没有提供任何出路，他们知道他们正在努力修复民意调查中的惨败，所以这就是导致顿悟的原因。
 
-新闻链接：[Yellow on Luc Montagnier, guru of no vax. France Soir: “He’s dead”. But there are no confirmations](https://www.unionesarda.it/en/yellow-on-luc-montagnier-guru-of-no-vax-france-soir-he39-s-dead-but-there-are-no-confirmations-sc5q6ize)
+但事实是，如果他们从一开始就研究实际科学，他们就会知道这是佛罗里达州的正确做法。
 
-[L’éminent professeur Luc Montagnier s’est éteint le 8 février 2022](https://www.francesoir.fr/societe-sante/leminent-professeur-luc-montagnier-sest-eteint-le-8-fevrier-2022)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
+德桑蒂斯是在这方面发言的完美州长，因为他是极少数有勇气挑战口罩精神病、并从一开始就与科学站在一起的人之一。佛罗里达州比许多州更能抵御 COVID，尤其是拥有如此多的老年人口。
+
+州长桑德斯的帖子抨击了科学在口罩方面发生了变化的想法…… [视频]首次出现在News Thud上。
+
+来源链接：[Gov DeSantis BLASTS the idea that the science changed on masking… \[VIDEO\]](https://ussanews.com/gov-desantis-blasts-the-idea-that-the-science-changed-on-masking-video/)
+
+编辑：LILY
+发布：肥鯮
+
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
