--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,27 +1,33 @@
 ---
-title: 立陶宛、澳大利亚合作，共同对抗中共贸易胁迫
+title: 【秘翻在线】拜登政府面临着取消口罩规定的压力
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1981363/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1981506/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/eed963fe-6e23-4919-8690-0c125d227e0a_cx0_cy10_cw0_w1023_r1_s1.jpg)图片来源：美国之音
-据美国之音2月9日报道，澳大利亚和立陶宛两国外长9日会晤，同意加强合作应对战略性挑战，尤其是共同应对来自中共国的压力。
+**撰稿：Grace**
 
-澳大利亚与中共国关系恶化后，北京针对澳大利亚的煤炭、葡萄酒和一些农产品设立的正式和非正式的贸易壁垒，令澳大利亚出口商损失了几百亿美元。立陶宛同意台北直接以台湾的名义在首都设立办事处之后，也遇到了中共国的贸易限制。澳大利亚此前宣布，作为第三方加入欧盟，在世界组织针对中共国的贸易胁迫提出申诉。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-07-at-3.47.40-PM-1.jpeg)图片来源：bronx.news 12
+据《每日邮报》2月9日报道，在民主党领导的四个州本周早些时候开始取消口罩限制后，拜登政府面临着取消口罩规定的压力。
 
-中共把自己管控的14亿奴隶和人票，并巨大的经济市场作为工具胁迫其他国家，澳大利亚和立陶宛首当其冲，但不会是最后被中共胁迫的国家。只要中共存在一天，奴隶制产生的利益都是西方贪婪的吸血者所需要的。全世界理念相同的国家需要团结一致，维护以规则为基础的国际秩序、自由和开放的贸易透明度以及安全与稳定，非常重要。同时必须把中共踢出世界贸易秩序，并推翻中共的集权势力，才可能一劳永逸地免除全球威胁。
+据报道，加利福尼亚州、康涅狄格州、特拉华州、新泽西州和俄勒冈州的民主党州长周一都宣布计划取消室内和/或学校的口罩规定。
 
-新闻参考链接：[https://www.voachinese.com/a/lithuania-australia-china-cohersion-20220209/6433805.html](https://www.voachinese.com/a/lithuania-australia-china-cohersion-20220209/6433805.html)
+加州(California)州长加文·纽森(Gavin Newsom)宣布，该州将在下周取消对接种疫苗者的室内口罩规定。
 
-* * *
+康涅狄格州(Connecticut)州长内德·拉蒙特(Ned Lamont)说，学校和托儿所的全州口罩规定将于2月28日结束。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+特拉华州(Delaware)州长约翰·卡尼(John Carney)宣布，普遍的室内口罩规定将于周五结束，学校的规定将于3月31日到期。
 
+新泽西州(New Jersey)州长菲尔·墨菲(Phil Murphy)说，他将在3月7日取消全州范围内的在校学生的口罩命令。
 
-编辑：【英国伦敦喜庄园编辑部】
+俄勒冈州（Oregon）州长凯特·布朗(Kate Brown)说，她的州的室内和学校范围的口罩规定将于3月31日结束。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+白宫新闻秘书珍·普萨基(Jen Psaki)周二说: “我们希望各州的领导人会看一看关于正在发生的事情的科学和数据。他们将对当地学区做出决定。”
+
+报道称，美国的中共病毒Covid-19病例在过去七天里下降了43%，每天记录267,765例，低于一周前的469,770例。
+
+**新闻来源：[Biden Under Pressure to End Mandates as Dem States Lift Restrictions](https://www.newsmax.com/politics/covid-19-mandates-masks-biden/2022/02/08/id/1056045/)**
+
+[Biden v the blue states: Psaki says it is up to school districts to decide mask mandates and there are leaders STOPPING them after four Democrat governors dropped classroom rules](https://www.dailymail.co.uk/news/article-10489735/Biden-urged-roll-COVID-restrictions-FOUR-Dem-governors-announced-end-school-masking.html)
 
  
 
