--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,17 +1,9 @@
 ---
-title: 【粤语配音】2022年2月9日：至关重要的三件大事
+title: 2/9/2022 文贵直播：为何要跟PAG和UBS打官司？不是为了钱，而是揭露单伟建和单博的真面目并曝光UBS和中共的勾兑
 ---
-`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1982055/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1982174/)
 
-紐約香草山-香港部
-
-所以今天有三件大事，第一，我们第一次打开了沼泽地，真正的在法庭上公开较量，找回中国人在西方，被共产党藏匿的财富，第一道大门打开了。
-
-这是一个，第二个七哥宣布，七哥将离开美国到伦敦和日本生活，直接面对共产党，从现在的美国以美灭共、以共灭共，长距离灭共，直接接触，这是第二个宣布。
-
-第三个七哥将在法律上申请，变得一无所有，做好一切最坏的事情发生，万一共产党弄个导弹导到日本去呢，万一给我下毒，毒死我呢是吧？，所以我都会准备好，然后我会让这些76个案子的缠诉，我让他们彻彻底底到另外一个阶段去。
-
-所以说兄弟姐妹们，这是第三个大事，因为今天法律程序没完，我在等着，等着今天PAG关于那天的开庭，初二的开庭结果出来，然后我的法律程序再进行完，就开始对PAG真正的全面作战全面开始，让这些片PAG所有案子的揭开，对美国司法的腐败，对美国黑暗控制、黑金的一个全面的，对西方的蓝金黄的一个大战，揭露的开始。
+秘密翻译组-北美组
 
  
 
