--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 最重要的沙特王子没去冬奥会
+title: 普京对杨洁篪的话
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982805/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1982880/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
