--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 今天出大事，华尔道夫酒店多人染上病毒死亡
+title: 普京周边盘古龙尾死人非同寻常
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983164/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983247/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
