--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 中国红牛严滨是华尔道夫现任老板
+title: 普京周边盘古龙尾死人非同寻常
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983202/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983247/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
