--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 出大事是天意
+title: 战友们一定要有紧张感
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983385/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983412/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
