--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 只要没打疫苗就是最大的幸运,加拿大小土豆一定会被法律惩罚
+title: 单伟建在美国隐藏的很深
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983718/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983820/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
