--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥的重大宣布
+title: UBS会让共产党怎么解释3
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983845/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983880/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
