--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 未来新中国联邦在世界各地的基地
+title: UBS会让共产党怎么解释（1）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983927/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983977/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
