--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥到日本去就近距离作战
+title: 未来新中国联邦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983894/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1983941/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
