--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: UBS会让共产党怎么解释（一）
+title: 强制疫苗不超过5月会结束
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1984396/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1984478/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
