--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: UBS会让共产党怎么解释（一）
+title: 七哥不怕共产党暗杀
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1984396/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1984446/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
