--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 中共怎样结束冬奥会
+title: CCP冬奥会给美国求情马上买五千亿美元的东西
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1985672/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1985712/)
 
 作者：东京樱花团小视频组
 
@@ -12,8 +12,6 @@ title: 中共怎样结束冬奥会
 编辑：东京樱花团/小视频组
 发布：东京樱花团/小视频组
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/樱花-3-1.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
