--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 黑暗势力的总部（二）
+title: 共匪不灭水不断流，直播绝不中断
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986772/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986875/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
