--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 关于排华&#8211;华人在加拿大起诉大卡车司机
+title: 个人生活改变更加坚定灭共
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986851/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986891/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
