--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 关于排华&#8211;华人在海外要币
+title: 共匪不灭水不断流，直播绝不中断
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986837/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1986875/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
