--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,54 +1,54 @@
 ---
-title: 美国保守党众议员提案制裁数千名中共官员
+title: 匈牙利科学家通过基因序列发现中共病毒实验室来源又一证据
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1986685/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1986746/)
 
-**翻译：沉默老歌**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1055.png)图片来源：[Breitbart News](https://www.breitbart.com/politics/2022/02/09/exclusive-house-conservatives-introduce-sanctions-proposal-for-thousands-chinese-communist-party-officials/)
-根据Breitbart News于2022年2月9日的独家报道：
+翻译播报：billwilliam
 
-**美国众议院高层保守派已提出一项立法提案，正式制裁数千名中共官员，其中包括中国独裁者习近平及其全家。**
+校对：Ermat
+![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-6.png)图源：7news.com.au
+据《每日邮报》2月10日报道，匈牙利科学家从被污染的南极土壤样本细菌DNA序列中意外发现类似中共病毒（新冠）的序列。因为这些DNA序列还含有仓鼠和猴子的基因，科学家认为这个证据证明中共病毒在实验室动物身上进行过改造。这个发现可能对病毒溯源有一定意义。
 
-来自众议员丽莎·麦克莱恩（Rep. Lisa McClain，密歇根州共和党）的提案得到了共和党研究委员会（Republican Study Committee，RSC）主席众议员吉姆·班克斯（Rep. Jim Banks，共和党印第安纳州）和众议院军事委员会高级成员众议员迈克·罗杰斯（Rep. Mike Rogers，共和党阿拉巴马州）的支持。这项措施是国会尚未考虑过的对中共和习近平本人最强烈的制裁努力，在布莱巴特新闻撰稿人和政府问责研究所（GAI）主席彼得·施韦泽出版的一本书《红手》（*Red-Handed*）之后，该书揭露了中共高级官员与民主党总统乔·拜登和众议院议长南希·佩洛西、Dianne Feinstein参议员等其他国会高级领导人的情报关系和财务交易。
+为了清楚描述事件的原委，本文首先理清时间点：
 
-麦克莱恩的法案名为《阻止中共法案》，将对中共官员实施削弱性制裁，包括阻止他们获得美国旅行签证和金融制裁，阻止他们使用或获取某些资产。它将制裁中共最高政府机构中共“全国代表大会”的每一位成员。中共全国代表大会成员与中共最高层成员每五年召开一次会议，下一次会议定于今年年底举行。
+2019年1月，中国科技大学的研究人员从南极的乔治国王岛（King George Island）收集12份土壤样本，用来分析企鹅身上的细菌。
 
-除了习近平本人在这项提议下受到制裁外，他的直系亲属，比如早年上哈佛的女儿，也将受到制裁。如果当时这项法案成为法律，习的女儿就不会被允许上哈佛。
+2019年11月，美国情报认为武汉病毒所三名工作人员出现类似中共病毒感染。
 
-该法案还将禁止在中国经营的美国公司与任何受制裁的个人（包括中共官员及其家人）进行任何交易或业务。
+2019年12月，南极土壤样本被送至上海生工生物工程公司（Sangon Biotech）的实验室进行DNA测序。同时这个公司也为武汉病毒所提供基因测序服务。
 
-**该法案还为中共从这些严厉的制裁中提供了一条出路：如果中共真正停止对维吾尔人和在香港的侵犯人权行为、盗窃美国知识产权和入侵台湾，那么该法案提供了总统豁免权，只要符合条件，美国可以用两年的时间证明来解除制裁。**然而，这项豁免将在法律上每两年为一个周期，并且需要由国会更新，以确保像拜登这样在经济上与中共关系密切的总统不会滥用豁免。
+2019年12月或2020年初，可能是因为样本标识错误，南极土壤样本被另一个冠状病毒项目的样本混合、污染。因此基因测序数据既含有南极细菌基因序列，也含有冠状病毒序列。
 
-“中共国是对美国和世界安全和安保的最大威胁之一”，麦克莱恩在独家提供给布莱巴特新闻的一份声明中说，“制裁中共领导人是向中共国和世界表明我们厌倦了他们咄咄逼人、恃强凌弱的策略。”
+另一个样本含有变异的中共病毒以及仓鼠和猴子的基因，说明利用试验室动物对病毒进行测试。
 
-共和党研究委员会（RSC）主席众议员吉姆·班克斯补充说，在这项提案中受到制裁的中共官员是特别残酷的侵犯人权者。班克斯监督的保守派RSC在众议院共和党会议上有 159 名成员，是国会中最大的众议院共和党人团体，实际上是任何一方或双方成员中最大的核心小组。
+病毒学家认为这是中共病毒的一个变种。也有专家认为这是中共病毒最早的始祖，也就是蝙蝠冠状病毒和中共病毒之间的桥梁。
 
-“这群人是世界上最严重的人权侵犯者和专制邪恶政权的领导人”，班克斯说，“我们不仅有国家安全义务，还有道德义务，阻止他们在我们的国家上执行他们的腐败议程。共和党研究委员会很自豪能够带头对抗中国共产党”。
+2019年12月31日，中共国承认第一例中共病毒。
 
-罗杰斯是武装部队的高级成员，他可能会成为这个非常强大的委员会的主席，该委员会考虑每年必须通过的立法，如《国防授权法》（NDAA），他说这是一项旨在追究中共责任的措施。
+2020年初，含有中共病毒序列的数据被和南极土壤细菌基因序列一起上载到一个国际数据库。一年多时间并未引起注意。
 
-罗杰斯（Rep. Mike Rogers）说：“中国共产党必须为他们令人震惊和令人不安的侵犯人权行为负责” 。“乔·拜登每天都在犹豫是否要让中共对种族灭绝和奴隶劳动负责，中共只会在他们的邪恶活动中变得更加胆大妄为”。
+2021年1月，匈牙利罗兰德大学（Lorand University）和兽医药大学（University of Veterinary Medicine）的科学家发现南极土壤样本含有微量的中共病毒始祖、以及仓鼠和猴子DNA。
 
-RSC国家安全和外交事务主席众议员乔·威尔逊（Rep. Joe Wilson）也支持该法案。威尔逊说：“我很高兴加入这项要求对中共高级成员进行恶意行为和侵犯人权的制裁的努力”， “如果我们要反击中共几十年来利用我们并压迫中国非凡的人民，我们必须大胆行事。”
+2021年12月23日，匈牙利科学家发表预印本论文，警告污染的样本可能指向中共病毒起源。
 
-除了班克斯、罗杰斯和威尔逊之外，麦克莱恩法案的原始共同发起人还包括众议员布莱恩巴宾（R-TX）、弗恩布坎南（R-FL）、安德鲁克莱德（R-GA）、罗德尼戴维斯（R-IL）、 Carlos Gimenez (R-FL)、Yvette Herrell (R-NM)、Clay Higgins (R-LA)、Bill Johnson (R-OH)、Doug Lamborn (R-CO)、David McKinley (R-WV)、Mary Miller (R-IL)、Marianette Miller-Meeks (R-IA)、Steven Palazzo (R-MS)、Tracey Mann (R-KS) 和 Greg Steube (R-FL)。
+2022年1月，预印本论文发布后，数据库中基因序列被删除，之后数据又被恢复。
 
-在强大的共和党领导人如此广泛的支持下，虽然民主党人不太可能在本届国会公开考虑该提案，但如果共和党人在即将举行的中期选举中如预期般夺回众议院多数席位，明年很有可能在共和党控制的众议院获得通过。
+中国科技大学的研究员否认曾删除或恢复数据。
 
-“习近平会讨厌这项立法”，支持该法案的办公室的一名共和党高级助手告诉Breitbart News，“这会让习的爪子离开我们的蜜罐”。
+2022年2月，匈牙利科学家发表第二篇预印本论文，认为南极土壤样本被早期中共病毒污染。
 
-原文链接：
-[Exclusive — House Conservatives Introduce Sanctions Proposal for Thousands of Chinese Communist Party Officials. Breitbart News.](https://www.breitbart.com/politics/2022/02/09/exclusive-house-conservatives-introduce-sanctions-proposal-for-thousands-chinese-communist-party-officials/)
+匈牙利科学家发现的证据是，被污染的土壤样本中含有早期中共病毒、以及仓鼠和猴子基因，这表明中共曾利用实验室动物或它们的细胞对中共病毒进行实验。而且来自上海的基因测序样本中，冠状病毒含有罕见的变异。
 
-**编辑：LILY**
+匈牙利科学家当时在进行毫不相干的研究，检测南极土壤细菌DNA，但是偶然间发现序列含有病毒基因序列。可能是因为DNA测序仪发生故障，错误标识样本，导致土壤样本被从未见过的冠状病毒变异污染，也就是说两个不同研究项目的样本被错误混合在一起。上海生工生物工程公司同时也为武汉病毒所提供测序服务。
 
-**发布：MQ**
+匈牙利团队认为发现的病毒序列可能是最早的中共病毒始祖，如果样本污染发生在2019年12月。同时，匈牙利团队称，他们指出样本污染后，中共国研究人员曾删除数据，虽然之后又恢复数据。中共国曾删除早期武汉中共病毒感染者的关键数据，并对质疑官方说法的中国科学家噤声。这种国家主导的掩盖真相行为导致外界质疑病毒大流行起源。
 
-20220210
+郭文贵先生很早就爆料中共病毒是共产党故意投放的生物武器，是实验室人工改造的病毒。这个大家都知道。只是现在匈牙利科学家通过一个偶然的事故找到又一个病毒最早实验室来源的证据。
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/農場文宣-3-4.jpg)
+新闻来源：
+
+[https://www.dailymail.co.uk/news/article-10497629/The-early-Covid-mutations-Chinese-lab-fuelling-leak-theory.html](https://www.dailymail.co.uk/news/article-10497629/The-early-Covid-mutations-Chinese-lab-fuelling-leak-theory.html)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
