--- a/gnews/50.md
+++ b/gnews/50.md
@@ -1,27 +1,21 @@
 ---
-title: 为增加奥运奖牌数量 北京疑悄悄改变国籍规则
+title: 台湾前线｜台湾离岛领空 疑遭中共民用无人机入侵
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1982469/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/1983375/)
 
-撰稿：东京樱花团丨Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-989.png)
-据【看中国网】2022年2月10日综合报导，现年18岁中美混血滑雪女将谷爱凌（Ailing Eileen Gu），8日在北京冬奥女子自由式滑雪大跳台项目中击败各国好手，夺下金牌，迅速成为关注度最高的冬奥选手。对此，中共官方更是宣传谷爱凌不负众望，为中国队夺下第3面金牌。有评论认为，中共政府可能已经为谷爱凌改变了某些规则，谷爱凌也恐是北京当局的实验品之一。
+**港台前線關注組 / 發佈時間｜10/2/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Food-Dine-Socia-Media-Youtube-Banner.png)**更多資訊請關注官方蓋特｜please follow our Gettr （[https://gettr.com/user/hktwfrontline](https://gettr.com/user/hktwfrontline)）**
 
-谷爱凌，2003年9月出生于美国加利福尼亚州旧金山，父亲是美国人，母亲来自中国北京。谷爱凌自小居住在美国，幼年时经常随母亲前往中国北京。作为旧金山当地人，谷爱凌在加利福尼亚州太浩湖（Lake Tahoe）的天然雪坡上学会滑雪。现年只有18岁的她，3岁踏上滑雪板，15岁就已拿到50多枚金牌，加上较好的外型，大陆官方将其宣传为“雪上公主”。谷爱凌决定代表中国参赛之时正值中美关系紧张时期，这也不可避免地让她陷入全球地缘政治和身份代表的辩论语境中。
+5日，有民众检举台湾马祖东引岛领空遭到不明飞行器穿越，并提供监视器画面。检举民众称，5日下午时听见飞机低空飞越，认为事关重大因此向管辖区连江县警局报案，警方在接获报案后立即通报军方东引指挥部。但截至目前，台湾政府并未针对此事进行说明。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220206002719.jpg)
+陆军东引地区指挥部于5日晚间回应此事，称不明飞行器飞越马祖东引岛领空的机型为“民用定翼双桨飞行器”，但当时并未即时说明国籍与机种。事后，军方判定疑似为中共民用版“运-12”运输机。过去，中共曾派遣此型号飞行器，对钓鱼台空域宣示主权。
 
-舆论讨论最热烈和具争议性的却不是她在北京登上领奖台，而是她始终没交代清楚的国籍问题。由于中国大陆不承认双重国籍，因此当谷爱凌宣布效力中国队时，外界开始关注她是否已经放弃美国国籍。企业赞助商红牛（Red Bull）曾宣布她放弃美国护照以代表中国出赛，但当有美国媒体提出质疑、进行追问时，红牛公司又将相关言论移除。自此，有关谷爱凌国籍状况充满各种猜测。对此，谷爱凌本人从未公开回应放弃美国国籍。谷爱凌经纪人透露说话要小心，对于谷爱凌敏感的国籍问题，各方说法不一。
+有媒体采访知情人士称，该架无人机由西往东，低空从西引岛外海，一路飞到东引岛上空，通过东引岛后，立刻快速爬升飞往外海，几乎是沿着当地地形飞行。
 
-她在去年接受《南华早报》访问时，只是避重就轻说过，“我这个外形和说话的方式，是完全的美国人。没有人能否认我是美国人。当我去中国的时候，没有人能否认我是中国人，因为我中文流利，对这里的文化也很熟悉，也完全认同中国人的身份。”
+台湾前空军副司令张廷廷在接受媒体采访时说到，运12直接飞到东引岛上空，依照相关规定，应该要采取更积极的处置，如警告或驱离的射击。他强调军方对此事的处置似乎慢半拍，发现飞行器后相关地区指挥部也只有表示全程严密监控。对于飞行器侵入领空的行为，张廷廷认为中共是蓄意在找破口试探，且其他离岛如乌坵、东沙岛等，以民充军、以民混军都有可能发生。
 
-专攻中国法的乔治华盛顿大学法学院教授克拉克（Donald Clarke）指出，北京当局很有可能因为统战而改变规则，“允许外国出生的运动员保留双重国籍，希望增加其奥运奖牌数量，毕竟中共政府长期以来，一直将奖牌数量视为吹捧国家实力的依据。这一策略可能是中共领导层的一项实验，”克拉克还说，“（北京）政府将判断公众的反应，然后再决定是否更大规模地推进这种做法，并允许运动员拥有双重国籍。”
+來源｜[民視](https://tw.stock.yahoo.com/news/%E4%B8%AD%E5%9C%8B%E6%B0%91%E8%88%AA%E6%A9%9F%E9%A3%9B%E6%8E%A0%E6%9D%B1%E5%BC%95-%E9%80%80%E5%B0%87%E8%BD%9F%E8%BB%8D%E6%96%B9%E6%85%A2%E5%8D%8A%E6%8B%8D-105502671.html)
 
-**中共没有什么规则和制度可言，一切都可以改变，宪法并不是中共的根本大法，领导的看法才是。一切都服务于领导的需要，为实现领导的梦想，达成领导的意愿，改个规则并不是个问题，打个脸撒个慌更是家常便饭。唯利是图的体制不要脸更没有脸，皇帝的新装已不是高段位，明知是假还能一本正经的当作真事，并能做的有鼻子有眼才是绝活，这需要定力。**
-
-新闻来源：[**18岁谷爱凌夺金牌恐变实验 北京疑悄悄改变规则**](https://m.secretchina.com/news/gb/2022/02/10/997445.html)
-
-*校对：东京樱花团/東洋武士*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
