--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,30 +1,27 @@
 ---
-title: 美议员推跨党派决议 呼吁中共保证彭帅的安全及自由
+title: 有声&#124;美国再将33家中共企业列入未经核实清单
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987663/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1987745/)
 
-**撰稿：日本东京方舟农场  幽蘭自得**
+配音：香草山健身部 – 玫瑰园
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月7日，据相关媒体消息显示，美国政府已经将包括中共国航发南方工业有限公司在内的33家中共实体列入至“未经核实清单”中。
 
-2月9日，美国多名联邦参议员推出跨党派的决议案，呼吁中共当局保证彭帅的人身安全和自由。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-163.jpg)图为美国国会大厦。（图片来自Stefan Zaklin/Getty Images）
-据《美国之音》报道，这个由田纳西州的共和党参议员布莱克伯尔尼(Marsha Blackburn)、佛罗里达州的共和党参议员斯科特(Rick Scott)和弗吉尼亚州的民主党参议员沃纳(Mark Warner)牵头的跨党派决议呼吁中国共产党保证网球明星彭帅的安全和自由。
+对此，美国商务部表示，联邦政府采取这一措施的原因在于，美国无法确定这些中共实体将如何使用其自美国进口的商品。
 
-该决议指出，彭帅案直接关系到国际社会对北京2022年冬奥会参赛运动员言论自由和安全的广泛关注。而国际奥委会未能明确和有力地质疑中华人民共和国政府关于彭的安全的声称，引发了人们对国际奥委会捍卫参加2022年北京冬奥会和残奥会的运动员人权的能力和意愿的质疑。
+文字版原文：[美国再将33家中共企业列入未经核实清单](https://gnews.org/zh-hans/1984848/)
 
-决议要求，中共政府通过确保彭的自由和安全并以公平和透明的方式调查她提出的指控，来帮助减少对北京冬奥会运动员安全的担忧。
+音频处理/发稿：Daxia
 
-该决议的共同发起人包括西弗吉尼亚州的共和党参议员卡比托(Shelly Moore Capito)、俄亥俄州的民主党参议员布朗(Sherrod Brown)、北达科他州的共和党参议员霍文(John Hoeven)、(俄勒冈州的民主党参议员怀登(Ron Wyden)、德克萨斯州的共和党参议员克鲁兹(Ted Cruz.)、俄勒冈州的民主党参议员默克利(Jeff Merkley、印第安纳州的共和党参议员布劳恩(Mike Braun)、马里兰州的民主党参议员范·霍伦(Chris Van Hollen)，宾夕法尼亚州的民主党参议员凯西(Bob Casey)、阿肯色州的共和党参议员科顿(Tom Cotton)、佐治亚州的民主党参议员沃尔纳克(Raphael Warnock)、威斯康星州的共和党参议员约翰逊(Ron Johnson)和新罕布什尔州的民主党参议员沙欣(Jeanne Shaheen)。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
 
-近日，彭帅在中（共）国奥林匹克委员会人员陪同下接受法国记者的采访。在访谈中，彭帅提到了自己决定退休的消息，并告诉记者，她“从未指控遭人性侵也没人间蒸发。”
-
-参考链接：
-1.[https://www.voachinese.com/a/us-senate-resolution-china-human-rights-peng-shuai-20220209/6434657.html](https://www.voachinese.com/a/us-senate-resolution-china-human-rights-peng-shuai-20220209/6434657.html)
-2.[https://gnews.org/zh-hans/1971250/](https://gnews.org/zh-hans/1971250/)
-
-素材采编：幽蘭自得
-编辑：老孙
-发布：爱放飞
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
