--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,23 @@
 ---
-title: 福克斯抨击主流媒体抹黑加拿大抗议活动
+title: 中共海关即日起暂停进口立陶宛牛肉
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1987616/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987704/)
 
-加拿大温哥华杨帆农场枫叶快讯
+**撰稿：日本东京方舟农场  海星**
 
-采编： Spirit           编辑撰稿：硫酸羟氯喹64
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1078.png)图片来源 FON NEWS
-据美国《福克斯新闻》2月9日报道，加拿大卡车司机的反疫苗护照运动，目前已被大部分由政府操控的主流媒体贴上了各种污名化的标签。并大肆歪曲报道，意图抹黑真正的民意。
+2月10日，中共海关决定即日起暂停从立陶宛进口牛肉。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-164.jpg)（图片来源：星岛网）
+据《路透社》报导，中共海关官网更新了《符合评估审查要求的国家或地区输华肉类产品名单》，该名单显示，自2月9日后中共暂停接受立陶宛牛肉的进口申报。此举意味着中共可能再次违反了WTO贸易规则。
 
-报道称，包括CNN和MSNBC等电视台在内的多个严肃媒体，都公然声称参加和平抗议的人是威胁民主体制的邪教徒。渥太华警察局长也用激烈言论公开指责抗议者，甚至将和平集会定义成“全国性叛乱”。
+此前，欧盟因中共禁止进口立陶宛货物的行为公然违反WTO贸易规则，而正式向WTO起诉中共。
 
-对此，加拿大卡车司机则表示，当局利用主流媒体的诽谤和打压不仅不能磨灭他们争取自由的决心，还让所有国民都逐渐看清了特鲁多政府独裁专制的真实面目，从而将唤起更多觉醒的民众参与到反抗暴政的行列中来。
+参考链接：
+1.[https://cn.reuters.com/article/china-custom-lithuania-beef-0210-idCNKBS2KF08F](https://cn.reuters.com/article/china-custom-lithuania-beef-0210-idCNKBS2KF08F)
+2.[https://gnews.org/zh-hans/1920547/](https://gnews.org/zh-hans/1920547/)
 
-原文链接： [https://www.foxnews.com/media/truckers-downright-disgusted-canada-freedom-convoy-media](https://www.foxnews.com/media/truckers-downright-disgusted-canada-freedom-convoy-media)
-
-校对编辑：硫酸羟氯喹64
-
-发布：青青
+素材采编：海星
+编辑：老孙
+发布：爱放飞
 
  
 
