--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,49 +1,34 @@
 ---
-title: 走出戈壁的“幸运”间谍——单伟健
+title: 文贵先生2月10日盖特健身直播要点
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987596/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1987671/)
 
-**撰稿：日本东京方舟农场 青城道姑**
+整理：波士顿五月花 跟随战神
+![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图159.png)图片来自盖特截屏
+1.北京冬奥会共产党就是抢劫、耍流氓，以法耍流氓，会成为共产党的末日会
+2.以检测为名、以奥林匹克规则为名把芬兰运动员关起来，失去了获得冠军或者奖杯的权利
+3.芬兰运动员的经历就像七哥被大连法院炮制的强迫交易罪，能够给他赚几百亿并被罚款几百亿的强迫交易罪
+4.一位农行的老战友说，农行最好的一笔贷款就是当年盘古的，给了几十亿利息还提前还款，历史上没有过
+5.共产党就是利用法律，改变游戏规则、操纵游戏规则，这次冬奥会也是如此
+6.这个世界最终会有真理的，真相一定会出来，美国一定会明白过来
+7.PAG因为告七哥，共产党允许它在香港上市。就像UBS把七哥的股票卖了，获得外国银行在中国唯一的金融牌照
+8.PAG、UBS的事情大了，一切都是刚刚开始
+9.共产党要用法律黑掉我们，我们使用法律要世界知道真相
+10.谷爱凌母女两代人被共产党利用
+11.跟着共产党、相信共产党走进火葬场，过去百年历史包括俄罗斯、前苏联、德国、古巴、委内瑞拉和现在正在饿死人的阿富汗都证明了这一点
+12.尊重游戏规则、尊重法律是一个社会的底线，道德是人和畜生之间最低的底线
+13.冬奥会运动员连续5天吃一样的饭
+14.冬奥会人造雪造成严重污染，对大地、苍天、运动员、法律和道德都是巨大的伤害
+15.后人怎么看待当初的冬奥会，中国人怎么能在西方获得尊重，怎么能阻止排华，真的不敢想象
+16.参加冬奥会的很多国家政府官员想走走不了，不走痛苦不堪
+17.共产党在各国制造矛盾、蓝金黄，收买各种官员，通过律师事务所大渗透
+18.这个世界能这样下去吗？拿过共产党钱的、和共产党勾兑过的难道不被清算吗？当年和前苏联、希特勒勾兑的没有一个逃过制裁
+19.兄弟姐妹们，越是在这种情况下越要坚信你的正义，坚守法律的原则，尊重法律，坚守自己的道德底线
+20.多少战友能真正理解七哥灭共，七哥直播是流血，是冒着生命危险！否则共产党不会给七哥安那么多罪名并全球猎杀七哥。
 
-**“****幸运****”****间谍《走出戈壁》**
+* * *
 
-2021年6月，这位所谓的知名金融家、投资人高调推出了自己的中文版回忆录《走出戈壁》。美国财政部长耶伦为其《走出戈壁》一书写的推荐语更是耐人寻味：“他的人生经历，哪怕只是机缘巧合，也显示出中美两国走的一起将足以成就任何可能。”单伟建所经历的“机缘巧合”的“幸运”，几乎让那个年代所有知青相形见绌，哪怕是现任中共国主席、书记的习近平看到后，也会羡慕不已。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-161.jpg)2022年2月8日，有媒体曝出，数百名华裔美国人同时写信给联邦调查局，揭发太平洋联盟集团（PAG）董事长兼首席执行官单伟建，是共产主义中国顶级间谍。该消息出台后，引起大量关注。
-据单伟健《走出戈壁》一书介绍，他的父亲出生在山东寒苦农家，在旧中国战火纷飞，老百姓屡遭饥寒困扰的时代，依然坚持阅读，熟读《史记》《资治通鉴》等古书，并成为中国海关总署的职员，与单伟建的母亲一起成为了驻京对外经贸大员。不得不说，单伟健的父母也是那个年代中最幸运的人。
-
-而单伟建在被下放到内蒙古的戈壁滩上时，依然能“幸运”的收听敌台《美国之音》的英语900句栏目。1975年，这位在戈壁滩上的知青，又“幸运”的将信件投递到了中南海，那封改变其人生的“幸运信”到达了毛泽东和周恩来的手里……
-
-可以说，单伟建的每一步都“幸运”的踩中了历史的音符。1975年，距离尼克松总统访华已过去3年，中美关系日渐向好。1979年，中美建交之际，单伟建成为了第一批公派出国的人员。自此单伟健完成了人生的华丽转身，真正地走出戈壁。
-
-单伟健深知要想最快融入西方文明社会，法律是必须的一步。他从法律领域入手，金融、媒体界同时进行，在这三个领域中构建了强大的网络体系，也完成了从公派学者到间谍身份的转变。
-
-**钱从哪里来？**
-
-单伟健的基金号称450亿美元，在英国也拥有数个上市公司，据称也都是百亿美元级别。2019年单伟健的儿子单博在美国洛杉矶以2000万美金全现金买入豪宅，引起市场震惊。据悉，单博也是一家与PAG关联的“GOBI资本”的实控人。
-
-一个来自中共国的红色留学生，用四十余年的时间便积累了大量的财富，不可谓不成功，或许幸运之神一直在眷顾着他，但回头看单伟建的金融之路，却与中共高层的关系相当密切。
-
-单伟健先是以合伙人身份加入新桥资本，用5亿美元获取了韩国第一银行51%的股权，后带领新桥团队入主深圳发展银行，成为首例收购中共国上市商业银行的外资机构。2005年，单伟建开始重组深圳发展，改组并控制董事会，而王岐山的亲信康典则出任监事长。2010年5月4日，新桥与平安集团股权转让获监管部门通过。同年6月1日，单伟建从德太投资集团离职，在6月21日出任太盟投资集团（PAG）董事长兼首席执行官。2020年入选了该年度的“中国最具影响力的30位投资人”的榜单。
-
-单伟健的财富帝国也远远不止平安集团和PAG，上面这个例子就是证明单伟健的财富起家来自于中共高层的支持，而他的角色也是这些高层的白手套之一。
-
-“**幸运****”间谍终有时**
-
-随着时间的推移和金钱的积累，从律政界到金融界再到媒体界都逃不过单伟健“幸运”之手，很快便完成了对于HBO老牌媒体以及后期对Vice Media的投入和控制。
-
-2017年始，这些投入变得尤为重要。爆料革命、新中国联邦创始人郭文贵先生对中共“蓝金黄”手段和中共高层巨额贪腐的曝光，引发了中共高层的恐慌和担忧，而单伟建也从一个金融家的角色，渐渐走到前台，替中共消除正义的声音。
-
-太平联盟PAG是单伟健执行中共针对西方政治、法律渗透的桥头堡，通过行贿输送利益，控制美国的律师，法官及家人。并通过合同造假，签名造假，炮制博讯案、马蕊强奸案和PAG案等案子，发起了针对郭文贵先生多达60多起的法律缠诉。
-
-无论是强奸马蕊案、博讯案，还是各类伪民运案件，以及盘古担保融资等等一系列的诉讼，背后的资方都是单伟建担任主席的太平联盟（PAG）。甚至在2022年新年伊始，为了配合太平联盟（PAG）对郭先生缠诉的进程，vice不惜通过编辑视频，用造假的方式对于华人、尤其是郭先生制造不利的舆论环境。
-
-自此，单伟健露骨的间谍执行手段，方才引起国际社会的重视。相信无论怎样的“幸运”和“机缘巧合”，都很难让这位走出戈壁的“幸运”间谍独善其身了。
-
-参考链接：
-[https://www.prfree.org/@astralsoul/weijian-shan-the-chairman-and-ceo-of-pacific-alliance-group-pag-is-communist-china-s-high-ranking-spy-money-laundering-criminal-b7kx64ep7kry](https://www.prfree.org/@astralsoul/weijian-shan-the-chairman-and-ceo-of-pacific-alliance-group-pag-is-communist-china-s-high-ranking-spy-money-laundering-criminal-b7kx64ep7kry)
-
-编辑：文顺
-发布：爱放飞
+*编辑 /发布：吐纳*
 
  
 
