--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,11 +1,29 @@
 ---
-title: 七哥金句：灭共
+title: 美议员推跨党派决议 呼吁中共保证彭帅的安全及自由
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1987587/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987663/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句.png)
-整理：雅典娜速记组 
-发布：枫叶红了
+**撰稿：日本东京方舟农场  幽蘭自得**
+
+2月9日，美国多名联邦参议员推出跨党派的决议案，呼吁中共当局保证彭帅的人身安全和自由。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-163.jpg)图为美国国会大厦。（图片来自Stefan Zaklin/Getty Images）
+据《美国之音》报道，这个由田纳西州的共和党参议员布莱克伯尔尼(Marsha Blackburn)、佛罗里达州的共和党参议员斯科特(Rick Scott)和弗吉尼亚州的民主党参议员沃纳(Mark Warner)牵头的跨党派决议呼吁中国共产党保证网球明星彭帅的安全和自由。
+
+该决议指出，彭帅案直接关系到国际社会对北京2022年冬奥会参赛运动员言论自由和安全的广泛关注。而国际奥委会未能明确和有力地质疑中华人民共和国政府关于彭的安全的声称，引发了人们对国际奥委会捍卫参加2022年北京冬奥会和残奥会的运动员人权的能力和意愿的质疑。
+
+决议要求，中共政府通过确保彭的自由和安全并以公平和透明的方式调查她提出的指控，来帮助减少对北京冬奥会运动员安全的担忧。
+
+该决议的共同发起人包括西弗吉尼亚州的共和党参议员卡比托(Shelly Moore Capito)、俄亥俄州的民主党参议员布朗(Sherrod Brown)、北达科他州的共和党参议员霍文(John Hoeven)、(俄勒冈州的民主党参议员怀登(Ron Wyden)、德克萨斯州的共和党参议员克鲁兹(Ted Cruz.)、俄勒冈州的民主党参议员默克利(Jeff Merkley、印第安纳州的共和党参议员布劳恩(Mike Braun)、马里兰州的民主党参议员范·霍伦(Chris Van Hollen)，宾夕法尼亚州的民主党参议员凯西(Bob Casey)、阿肯色州的共和党参议员科顿(Tom Cotton)、佐治亚州的民主党参议员沃尔纳克(Raphael Warnock)、威斯康星州的共和党参议员约翰逊(Ron Johnson)和新罕布什尔州的民主党参议员沙欣(Jeanne Shaheen)。
+
+近日，彭帅在中（共）国奥林匹克委员会人员陪同下接受法国记者的采访。在访谈中，彭帅提到了自己决定退休的消息，并告诉记者，她“从未指控遭人性侵也没人间蒸发。”
+
+参考链接：
+1.[https://www.voachinese.com/a/us-senate-resolution-china-human-rights-peng-shuai-20220209/6434657.html](https://www.voachinese.com/a/us-senate-resolution-china-human-rights-peng-shuai-20220209/6434657.html)
+2.[https://gnews.org/zh-hans/1971250/](https://gnews.org/zh-hans/1971250/)
+
+素材采编：幽蘭自得
+编辑：老孙
+发布：爱放飞
 
  
 
