--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,62 +1,36 @@
 ---
-title: 安德鲁•G•胡夫博士致信维克参议员关于彼德•达萨克的举报信
+title: “我已变得骨瘦如柴”：俄罗斯运动员声称北京冬奥会的食物差得难以置信
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1987577/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987632/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2114.gif)
+**翻译：日本东京方舟农场 乾坤一掷**
 
+尽管与奥运会有关的人员和运动员中的 COVID-19 病例激增，中共正在因为北京举办的 2022 年冬季奥运会面临来自各方的批评。 奥运会上的新问题现已曝光，因为一名俄罗斯运动员声称在奥运会上为 COVID-19 阳性运动员提供的食物“不可食用”且“无法食用”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-162.jpg)（圖片來源：wionews.com）
+在北京奥运会上，被隔离的运动员们指控饭菜不能吃、运动员食物不够、训练设备不足等，他们抨击奥运组织者的不公平待遇。 俄罗斯冬季两项选手瓦斯涅佐娃（Valeria Vasnetsova）已经在北京冬季奥运会期间被检测出 COVID-19 呈阳性，她在 Instagram 上分享了她的恐怖故事。
 
+瓦斯涅佐娃在她的 Instagram分享了一张在北京一家隔离酒店为她提供食物的照片。在她分享的照片中，一盘食物包括普通的意大利面、几个土豆、骨头上烧焦的肉和橙汁。瓦斯涅佐娃说，“这已经是五天的早餐、午餐和晚餐了”。
 
-安德鲁•G•胡夫（Andrew G. Huff）博士，理科硕士
-揭发人/生态健康联盟（EcoHealth Alliance）前任数据与技术副主席 
-——————————————————————————————————————————————
- 2022年2月8日
+这位俄罗斯人声称，自从被隔离以来，她每天都在哭，而且由于缺乏营养和适当的饮食，她的骨头已经开始凸显。她声称她“累了”，并希望这一切尽快结束。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-40.jpg)（圖片來源：wionews.com）
+“我的胃很痛，脸很苍白，我的眼睛周围有巨大的黑眼圈。我希望这一切结束。我每天都在哭。我很累，”瓦斯涅佐娃在她的 Instagram 上分享了这段话，并且附带了一张食物的图片。
 
-致：尊敬的罗杰•F•维克
-美国参议院揭发人委员会资深成员
-华盛顿特区德克森街555号参议院办公楼
+她声称她靠几块意大利面勉强维持生计，但在分享照片的那天，她不得不吃掉所有提供给她的脂肪，因为她非常饿，而且体重下降的非常的明显。 “但今天我吃了他们提供的所有脂肪而不是肉，因为我非常饿。我已经饿的皮包骨头了。
 
-亲爱的维克参议员：
+瓦斯涅佐娃还在她的帖子中发表了令人震惊的消息，声称与北京隔离酒店中的正常奥运会相关人员相比，COVID-19 检测呈阳性的运动员所受到的服务更差且餐食质量更加低劣。
 
-本人名叫安德鲁•G•胡夫博士，是生态健康联盟的前任数据与技术副主席。我是主管与新发传染病相关的数据分析和技术开发工作的高级管理人员，涉及大量由政府资助的合同。为该工作提供资金的包括各种机构：国防部、国防威胁减少局、高级情报研究计划署、美国国际开发署（中情局）、国立卫生研究所、美国农业部，还有许多其他政府与非政府的赞助机构（惠康基金会、史密森尼学会、谷歌）。我也是”预言（PREDICT）项目” （苏丹约旦）的国家协调人，我们通过该项目在全球搜寻新型冠状病毒。此外，我还是建模与分析团队的高级成员，还担任联合国的顾问。
+她透露，在隔离旅馆门外捡起留给她的食物时，她注意到留在走廊其他房间外面的盒子不一样。门上贴有标志，以区分奥运选手和奥运会工作人员。俄罗斯人声称提供给非运动员的食物不同，运动员的盒子里的食物更差。
 
-我参与所有的行政领导会议。在这些会议中，我们会讨论机构组织策略、项目开发、项目管理、财务、预算、人事、以及与生态健康联盟的经营管理相关的其他事务。我以博士级新发传染病科学家和流行病学家的身份参与该机构的多个项目，并为多个项目提供咨询。我还审阅了许多该机构撰写的建议书。
+她还向她的团队医生分享了食物的详细信息，该团队医生的 COVID-19 检测结果也呈阳性，并被隔离在同一家酒店。瓦斯涅佐娃说，队医得到了新鲜水果、沙拉和西兰花虾。 “我真的不明白，为什么对我们运动员是这种态度？” – 俄罗斯人报写道。
 
-作为揭发人，我的指控已发送给以下人士和机构：
-情报界                  监察长办公室
-美国农业部            监察长办公室
-国立卫生研究所  监察长办公室
-美国国际开发署    监察长办公室
-国防部                  监察长办公室
-国防威胁降低局    监察长办公室
+组织者迅速解决了瓦斯涅佐娃所关心的问题，根据美联社的报道，俄罗斯冬季两项队发言人谢尔盖·阿维扬诺夫证实为她提供更好的食物。他还补充说，运动员还将很快获得一辆健身自行车进行训练。
 
-2021年下旬，我以一个重要证人的身份挺身揭发生态健康联盟内部存在大量不道德甚至违法的行为。该机构与武汉病毒研究所合作，资助开发SARS-COV2病毒，即众所周知的COVID-19病毒。
+原文链接：
+[https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017](https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017)
 
-生态健康联盟参与对美国政府实施诈骗（工时记录诈骗，合同报销欺诈）。发现且知晓这些严重的问题后，我提请彼德•达萨克（Peter Daszak）博士、阿列克谢•查木拉（Aleksei Chamura）博士和财务总监哈维•卡斯旦（Harvey Kasdan）予以关注。在一个会议上我提出相关议题，哈维•卡斯旦下班回家后即因心脏病发作而死亡。
-
-彼德•达萨克博士于2015年末及2016年初向我透露他正在与中情局合作。我持有可以证明生态健康联盟当时正在与情报系统合作的文件，也把它们发布在推特上且分享给多位记者。这些文件包括由彼德•达萨克博士撰写并提交的InQTel推销平台，以及由本人撰写的高级情报研究计划署报告。
-
-管理团队公开讨论了在中国进行的功能增强研究工作，我本人出于多个显而易见的原因提出反对（主要是这样等于培训中国共产党研制生物武器，还有知识产权盗窃的问题）。
-
-生态健康联盟和国外的实验室没有采取足够的管控措施以确保适度的生物研究安全、生物防控安全和风险管理水平，最终导致武汉病毒研究所发生实验室泄漏。实际上，我在一个行政项目规划会议上提出过这些忧虑，会上达萨克博士迅速驳斥了我的观点。这一信息可从美国驻中国领事馆与国务院的往来电报中得到证实。仍而，这种情况并不限于中国。
-
-生态健康联盟在国立卫生研究所、国立过敏与传染病研究所和安东尼•福奇博士为该项目拨款之前就与武汉病毒研究所和北卡罗莱纳大学的拉尔夫•巴里克（Ralph Baric）博士合作进行功能增强研究。我已经在推特上并向媒体发布了能证明这一指控的文件。
-
-生态健康联盟，还有世界上的许多顶级科学家，在获得拨款前就开始工作，以确保完成相关研究。这在学界是司空见惯的，也正因此那些顶级科学家才得以收集到必要的“基础数据”，从而在激烈拨款竞争中胜出，获得资金。通常，第一年的工作在获得资金前就几乎或已经全部完成。在生态健康联盟，我们通常会提前开始工作。这是一个重要的事实，因为在生态健康联盟发送给国防部高级研究计划局的《拆弹项目（DEFUSE）拨款提案》中明确描述了由中国研究人员自2019年9月开始进行的有可能导致SARS-COV2病毒意外或有意泄漏的功能增强研究。这显示由生态健康联盟撰写并提交给国防部高级研究计划局的《拆弹项目提案》中所描述的工作在该机构作出拨款决定之前就已经在积极进行中。
-
-彼德•达萨克博士可能是一个代表中国政府的双面间谍。这是基于我对他的行为以及对他为与中国人员合作在中国进行功能增强研究或其他高风险的实验室工作（没有看到风险、令人担忧的事项、或其他明显的问题）所作陈述的观察。对于一位必须对董事会、公司、和员工负责的总裁，这种做法是非常荒唐的。
-
-期待为这些令人遗憾的事实陈述宣誓作证，本人悉从尊便。
-
-敬上
-
-安德鲁•G•胡夫博士，理科硕士
-
-
-
-**编译：Boredbug
-校对：sherryok（水云间）
-上传排版：V在途中**
+素材采编：妙喜小油鍋
+校对：妙喜小油鍋
+发布：爱放飞
 
  
 
