--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,55 +1,23 @@
 ---
-title: 法媒报道: 新的加密货币喜马拉雅币推出后不久即达 270 亿美元估值
+title: 福克斯抨击主流媒体抹黑加拿大抗议活动
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1987521/)
+`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/1987616/)
 
-译评：香草山商业部 —文锤
+加拿大温哥华杨帆农场枫叶快讯
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
+采编： Spirit           编辑撰稿：硫酸羟氯喹64
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1078.png)图片来源 FON NEWS
+据美国《福克斯新闻》2月9日报道，加拿大卡车司机的反疫苗护照运动，目前已被大部分由政府操控的主流媒体贴上了各种污名化的标签。并大肆歪曲报道，意图抹黑真正的民意。
 
+报道称，包括CNN和MSNBC等电视台在内的多个严肃媒体，都公然声称参加和平抗议的人是威胁民主体制的邪教徒。渥太华警察局长也用激烈言论公开指责抗议者，甚至将和平集会定义成“全国性叛乱”。
 
+对此，加拿大卡车司机则表示，当局利用主流媒体的诽谤和打压不仅不能磨灭他们争取自由的决心，还让所有国民都逐渐看清了特鲁多政府独裁专制的真实面目，从而将唤起更多觉醒的民众参与到反抗暴政的行列中来。
 
+原文链接： [https://www.foxnews.com/media/truckers-downright-disgusted-canada-freedom-convoy-media](https://www.foxnews.com/media/truckers-downright-disgusted-canada-freedom-convoy-media)
 
+校对编辑：硫酸羟氯喹64
 
-“喜马拉雅币”是市场上最新的加密货币，其在推出后不到两周的时间内估值就达到了 270 亿美元，价格从 10 美分上涨至 27 美元。没有其他任何人比流亡海外的亿万富翁郭文贵更会在社交媒体上推广新的加密货币。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/La-nouvelle-crypto-monnaie-Himalaya-Coin-atteint-une-valorisation-de-27.jpg)图片来源：网络
-
-这位亿万富翁出现他的音乐视频“Hcoin to the Moon”中，他在视频中宣传这种加密货币。视频中的郭，抽着雪茄，在游艇上闲逛，开着一辆红色跑车。唐纳德·特朗普的前顾问史蒂夫·班农也对此很感兴趣，并表示该剧的首次亮相是“不朽的”。
-
-在中国加大对加密货币使用的打击力度之际，“喜马拉雅币”的首次亮相值得一提。更引人注目的是，加密货币是由郭和班农推动的，他们多年来一直在公开反对中共政府。
-
-史蒂夫·班农上周在接受采访时称赞了“喜马拉雅币”，并将其置于他与中国抗争的背景下。喜马拉雅交易所（Himalaya Exchange）首席执行官 Jesse Brown 表示，已经发行了 10 亿枚喜马拉雅币。这相当于大约 270 亿美元的市场价值。
-
-译者评：很少看到法媒中有对喜交所和喜币的报道，此篇报道对于推广喜支付有着一定助力作用，战友们加油！用好一切可以利用的工具推广喜支付。
-
-**文章来源：**
-
-**[La nouvelle crypto-monnaie Himalaya Coin atteint une valorisation de 27 milliards de dollars peu après son lancement – ThePressFree](https://thepressfree.com/la-nouvelle-crypto-monnaie-himalaya-coin-atteint-une-valorisation-de-27-milliards-de-dollars-peu-apres-son-lancement/)**
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-8.jpg)
-
-校对/发稿：小鹿
-
-
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场**** ****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场**** ****GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场**** ****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** ****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 ****Discord**](https://discord.gg/ChqXAHd)
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/logo-5.jpg)
-
-
-
-
+发布：青青
 
  
 
