--- a/gnews/57.md
+++ b/gnews/57.md
@@ -1,20 +1,24 @@
 ---
-title: 美前国务卿彭佩奥称：中共没有权利享有奥运荣耀
+title: 日本要求返日冬奥会选手接受手机安全检查
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1981447/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1981448/)
 
-作者：纽约磐石农场—在远方
+作者：银河系农场—骄子
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/1-GTV-Gnews-HEADER-8.png)
-2月8日，美国前国务卿彭佩奥在接受福克斯采访时明确表示，美国不应当选择参加犯下种族灭绝罪的政权所举办的奥运会，中共政府无权享有奥运会的荣耀。习近平想利用冬奥会对世界宣传中共国事美好的假象，并掩盖中共对新疆等犯下的种族灭绝和反人类罪行为。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture0-21.jpg)
-此外，彭佩奥进一步指出，共产党通过强迫运动员使用一次性手机，通过此手段搜集相关信息。且中共还秘密搜集运动员的DNA信息，储存在中共国或者军方的数据库中。因此，他呼吁应抵制北京冬奥，在毫无人权的中共国举办体现奥林匹克精神的冬奥会，实在讽刺。
+美国前国务卿彭佩奥称，中共强制参加冬奥会的运动员使用一次性手机，目的为搜集信息。对于资讯安全的部分，日本体育厅2月8日表示，日本参加北京冬奥会的代表团成员将在返日后接受移动设备检查，他们担心中共冬奥会强制使用的应用程序My2022可能会构成安全风险。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture0-22.jpg)
+日本体育厅表示，安全专家将筛选安装了北京奥运会官方应用程序My2022的设备，并在必要时删除可疑应用程序，所有这些都须经手机所有者许可。同时日本体育厅希望向参加3月4日北京残奥会的日本代表团提供移动设备。日本体育厅及国家网络安全和战略中心都将提供咨询服务。
 
-参考链接：[美前国务卿彭佩奥称：中共没有权利享有奥运荣耀](https://gettr.com/post/pt8u85f576)
+此前，日本政府曾敦促那些前往中共参加比赛的人专门为My2022应用程序准备替代设备，将使用量降至最低，并在离开中共国后删除该程序。
+
+据悉，包括英国和美国在内的七个西方国家此前都曾呼吁他们的运动员不要随身携带个人智能手机，目前，共有约1000名运动员和教练计划丢弃他们在中共冬奥会上使用过的手机。
+
+参考链接：[日本要求返日冬奥会选手接受手机安全检查](https://english.kyodonews.net/news/2022/02/4372eb10123a-returning-japan-olympians-to-have-smartphones-undergo-security-check.html)
 
 ![This image has an empty alt attribute; its file name is calendar.png](https://assets.gnews.org/wp-content/uploads/2022/02/calendar.png)
 
-总编：文特
-编辑：静言
+总编：飞虹
+编辑：飞虹
 校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
@@ -25,8 +29,6 @@ title: 美前国务卿彭佩奥称：中共没有权利享有奥运荣耀
 [**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
 ![This image has an empty alt attribute; its file name is MOS_LOGO_publish-14.png](https://assets.gnews.org/wp-content/uploads/2021/10/MOS_LOGO_publish-14.png)
-
-
 
  
 
