--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,36 +1,31 @@
 ---
-title: 美国：FBI警告美国运动员在北京冬季奥林匹克运动会上警惕中共的网络入侵
+title: 麦克风对铁链的歌颂
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1987682/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987775/)
 
-撰稿人： Lois
-翻译：一根筷子
-校对：sherryok (水云间）
+**撰稿：日本东京方舟农场  知心姐姐**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2115.png)
+徐州八个孩子的妈妈被非人对待的新闻曝光有一阵子了，如果说它最开始给人带来的感受是震惊，那么接下来各方人士的表现是让人吃惊，亦或说是出人意料！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-165-scaled.jpg)（图片取自网络）
+稍有常识的国人完全可以理解事情的大致经过：这个女人在未成年时就被人贩买卖，最后到了现在这个畜生手里。二十多年间，被这个畜生和畜生弟、畜生爹无数次轮奸，八个（也许不止八个）孩子也分不清到底是谁的崽儿。被偶然发现时，脖颈上套着如拴狗一般的链子，更甚的是还加上了一把铁锁！
 
-美国FBI建议所有参加2022年北京冬季奥林匹克运动会的美国运动员使用一次性手机而不是个人手机，考虑到可能来自中共的网络入侵。
+如果但凡还算正常，接下来发生的应该是司法机关的介入和调查，对李氏女子予以人道救助，相关政府部门待接管孩子的抚养权，等待司法部门的审理结果..
 
-一次性手机是一种便宜，可以预先充值的手机，当你不再使用时可以被销毁。
+然而事情却完全向相反的方向发展，强奸犯畜生一夜之间成为了网红和当地不要脸企业的代言人！而且胸前还同时插上三个麦克风开始了网上直播！！！一个本应该接受调查和审判的犯罪嫌疑人瞬间变成了受人追捧的明星！不得不说这个社会病得不轻！
 
-加拿大政府也给过本国运动员相同的建议，将他们的个人手机留在家里。
+更加难以理解的是徐州政府居然接二连三发布所谓的权威调查，字里行间都透露出要把真相掩藏、息事宁人的企图。是的，这件事必须压下去，否则的话其他贩卖人口的事情都败露出来，乌纱帽肯定是不保的！
 
-政府同时警告运动员们只在比赛时将手机链接至官方网络，在不使用手机时关闭传输功能。
+这几天我总是在想，所有参与到这场剧情反转的方方面面的人或者机构、甚至是政府，没有去当好莱坞的编剧，真是他们双方的损失。
 
-“FBI督促所有的运动员将他们的个人手机留在家中，只在比赛期间使用临时手机。虽然没有重大的网络干扰，但是目前最流行的攻击手段是恶意软件，电子邮件欺诈，网络钓鱼以及使用虚假网站和流媒体服务，他们看起来像奥林匹克运动会指定服务商”，FBI在其发送的一份备忘录中陈述。
+当把畜生和女子的照片拼接到一起后，我觉得是对这个病入膏肓的社会一个巨大的讽刺，多么像靠媒体吹嘘的伟光正的中国共产党在公然强奸自己的韭菜！
 
-“这些活动包括分布式拒绝服务（DDoS）攻击，勒索软件，恶意软件，社会工程，数据偷窃或泄露，网路钓鱼活动，虚假信息活动或者内部威胁，一旦成功，会破坏或者阻止现场直播，导致敏感数据泄露，或影响支持奥运会的公共或私人的数字基础设施”
+当然在整个事态发展的过程中，我也看到了很多好心人、善良人的唏嘘感叹和伸张正义，但这些人当中又有多少人能想到那畜生胸前的麦克风，就如同中共的喉舌；满脸堆笑的畜生就像老杂毛们舔着脸说：都是为你好；而那位被铁锁绕颈、带着枷锁的就是我们这些韭菜呢？
 
-据FBI的报告，在去年的东京奥林匹克运动会期间，有超过4.5亿次的黑客攻击。好在这些攻击都被网络警察一一击破。
+我想如果鲁迅还在世，他一定会惊呼：这才是真正吃人的社会！
 
-FBI也强调，强制使用数字钱包，比如中共病毒疫苗电子卡等也大大增加了运动员的设备被黑客入侵的威胁，运动员的个人信息会被窃取并被装上恶意软件。
-
-“下载和使用应用软件，包括那些参赛和逗留期间必须使用的软件，也会增加窃取个人信息、安装跟踪工具，恶意代码或者软件的机会”，备忘录中提到。
-
-为冬奥会运动员和游客设计的“My 2022 App“因为技术漏洞也存在隐私问题，给黑客提供了机会。
-
-**审核校对：Barry Jack
-上传排版：V在途中**
+素材采编：知心姐姐
+编辑：老孙
+发布：爱放飞
 
  
 
