--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,35 +1,27 @@
 ---
-title: 文贵先生2月10日盖特健身直播要点
+title: 有声&#124;美对台出售爱国者军备系统抵御中共威胁
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1987671/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1987762/)
 
-整理：波士顿五月花 跟随战神
-![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图159.png)图片来自盖特截屏
-1.北京冬奥会共产党就是抢劫、耍流氓，以法耍流氓，会成为共产党的末日会
-2.以检测为名、以奥林匹克规则为名把芬兰运动员关起来，失去了获得冠军或者奖杯的权利
-3.芬兰运动员的经历就像七哥被大连法院炮制的强迫交易罪，能够给他赚几百亿并被罚款几百亿的强迫交易罪
-4.一位农行的老战友说，农行最好的一笔贷款就是当年盘古的，给了几十亿利息还提前还款，历史上没有过
-5.共产党就是利用法律，改变游戏规则、操纵游戏规则，这次冬奥会也是如此
-6.这个世界最终会有真理的，真相一定会出来，美国一定会明白过来
-7.PAG因为告七哥，共产党允许它在香港上市。就像UBS把七哥的股票卖了，获得外国银行在中国唯一的金融牌照
-8.PAG、UBS的事情大了，一切都是刚刚开始
-9.共产党要用法律黑掉我们，我们使用法律要世界知道真相
-10.谷爱凌母女两代人被共产党利用
-11.跟着共产党、相信共产党走进火葬场，过去百年历史包括俄罗斯、前苏联、德国、古巴、委内瑞拉和现在正在饿死人的阿富汗都证明了这一点
-12.尊重游戏规则、尊重法律是一个社会的底线，道德是人和畜生之间最低的底线
-13.冬奥会运动员连续5天吃一样的饭
-14.冬奥会人造雪造成严重污染，对大地、苍天、运动员、法律和道德都是巨大的伤害
-15.后人怎么看待当初的冬奥会，中国人怎么能在西方获得尊重，怎么能阻止排华，真的不敢想象
-16.参加冬奥会的很多国家政府官员想走走不了，不走痛苦不堪
-17.共产党在各国制造矛盾、蓝金黄，收买各种官员，通过律师事务所大渗透
-18.这个世界能这样下去吗？拿过共产党钱的、和共产党勾兑过的难道不被清算吗？当年和前苏联、希特勒勾兑的没有一个逃过制裁
-19.兄弟姐妹们，越是在这种情况下越要坚信你的正义，坚守法律的原则，尊重法律，坚守自己的道德底线
-20.多少战友能真正理解七哥灭共，七哥直播是流血，是冒着生命危险！否则共产党不会给七哥安那么多罪名并全球猎杀七哥。
+配音：香草山健身部 – 玫瑰园
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+当地时间2月8日，据台湾媒体报道，台湾外交部已经正式接到美国政府的通知，即美方将对台湾出售价值1亿美元的设备和服务，用以维持、维护和改进台湾现有的爱国者导弹防御系统。
 
-* * *
+对此，台湾外交部表示了高度欢迎。同时，外交部也强调，鉴于中共持续的军事扩张和挑衅行为，台湾将继续深化台美双方紧密的安全伙伴关系，并对印太地区的和平、稳定与繁荣做出贡献。
 
-*编辑 /发布：吐纳*
+文字版原文：[美对台出售爱国者军备系统抵御中共威胁](https://gnews.org/zh-hans/1985495/)
 
+音频处理/发稿：Daxia
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
