--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,36 +1,67 @@
 ---
-title: “我已变得骨瘦如柴”：俄罗斯运动员声称北京冬奥会的食物差得难以置信
+title: 蓬佩奥： 台湾绝对不是中国的内政
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987632/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1987732/)
 
-**翻译：日本东京方舟农场 乾坤一掷**
+前国务卿迈克.蓬佩奥： 台湾绝对不是中国的内政。 我们必须让中共明白我们将采取任何必要行动来确保台湾保持自由。
 
-尽管与奥运会有关的人员和运动员中的 COVID-19 病例激增，中共正在因为北京举办的 2022 年冬季奥运会面临来自各方的批评。 奥运会上的新问题现已曝光，因为一名俄罗斯运动员声称在奥运会上为 COVID-19 阳性运动员提供的食物“不可食用”且“无法食用”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-162.jpg)（圖片來源：wionews.com）
-在北京奥运会上，被隔离的运动员们指控饭菜不能吃、运动员食物不够、训练设备不足等，他们抨击奥运组织者的不公平待遇。 俄罗斯冬季两项选手瓦斯涅佐娃（Valeria Vasnetsova）已经在北京冬季奥运会期间被检测出 COVID-19 呈阳性，她在 Instagram 上分享了她的恐怖故事。
 
-瓦斯涅佐娃在她的 Instagram分享了一张在北京一家隔离酒店为她提供食物的照片。在她分享的照片中，一盘食物包括普通的意大利面、几个土豆、骨头上烧焦的肉和橙汁。瓦斯涅佐娃说，“这已经是五天的早餐、午餐和晚餐了”。
 
-这位俄罗斯人声称，自从被隔离以来，她每天都在哭，而且由于缺乏营养和适当的饮食，她的骨头已经开始凸显。她声称她“累了”，并希望这一切尽快结束。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2-40.jpg)（圖片來源：wionews.com）
-“我的胃很痛，脸很苍白，我的眼睛周围有巨大的黑眼圈。我希望这一切结束。我每天都在哭。我很累，”瓦斯涅佐娃在她的 Instagram 上分享了这段话，并且附带了一张食物的图片。
+> Taiwan is absolutely NOT an affair internal to China. We must ensure the CCP understands that we will undertake any actions necessary to ensure Taiwan remains free.
+> — Mike Pompeo (@mikepompeo) [February 10, 2022](https://twitter.com/mikepompeo/status/1491855779284103171?ref_src=twsrc%5Etfw)
 
-她声称她靠几块意大利面勉强维持生计，但在分享照片的那天，她不得不吃掉所有提供给她的脂肪，因为她非常饿，而且体重下降的非常的明显。 “但今天我吃了他们提供的所有脂肪而不是肉，因为我非常饿。我已经饿的皮包骨头了。
 
-瓦斯涅佐娃还在她的帖子中发表了令人震惊的消息，声称与北京隔离酒店中的正常奥运会相关人员相比，COVID-19 检测呈阳性的运动员所受到的服务更差且餐食质量更加低劣。
 
-她透露，在隔离旅馆门外捡起留给她的食物时，她注意到留在走廊其他房间外面的盒子不一样。门上贴有标志，以区分奥运选手和奥运会工作人员。俄罗斯人声称提供给非运动员的食物不同，运动员的盒子里的食物更差。
+众议员加拉格尔新闻办公室： 加拉格尔说:“国际奥委会的可鄙行径。他们最近会见了彭帅，并声称回答了“彭帅在哪里?”她在哪儿?她被中共扣留了。她被封口了。她被扣为人质，国际奥委会在其中狼狈为奸。”
 
-她还向她的团队医生分享了食物的详细信息，该团队医生的 COVID-19 检测结果也呈阳性，并被隔离在同一家酒店。瓦斯涅佐娃说，队医得到了新鲜水果、沙拉和西兰花虾。 “我真的不明白，为什么对我们运动员是这种态度？” – 俄罗斯人报写道。
 
-组织者迅速解决了瓦斯涅佐娃所关心的问题，根据美联社的报道，俄罗斯冬季两项队发言人谢尔盖·阿维扬诺夫证实为她提供更好的食物。他还补充说，运动员还将很快获得一辆健身自行车进行训练。
 
-原文链接：
-[https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017](https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017)
+> Rep. Gallagher: "The IOC has acted despicably. They recently met with Peng Shuai and claimed to answer the question 'Where is Peng Shuai?' Well, where is she? She's being detained by the CCP. She's being silenced. She's being held hostage, and the IOC is complicit in it all." [pic.twitter.com/oDflLN887R](https://t.co/oDflLN887R)
+> — Rep. Gallagher Press Office (@RepGallagher) [February 10, 2022](https://twitter.com/RepGallagher/status/1491833496083611649?ref_src=twsrc%5Etfw)
 
-素材采编：妙喜小油鍋
-校对：妙喜小油鍋
-发布：爱放飞
+
+
+参议员瑞克·斯科特： 共产主义中国把这个可怜的运动员当做2022年冬奥会的道具。这都是习的邪恶宣传，用“奥运会”来粉饰他的种族灭绝和压迫。国际奥委会在哪里?我们必须弄清楚迪尼吉尔·依拉穆江身上发生了什么事。 （转每日电讯：维吾尔族滑雪选手，中国冬奥会火炬手，在北欧联合赛首秀后“消失”了）
+
+
+
+> Communist China used this poor athlete as a prop for [@Beijing2022](https://twitter.com/Beijing2022?ref_src=twsrc%5Etfw). It’s all part of Xi’s evil propaganda to whitewash his genocide & oppression with the [@Olympics](https://twitter.com/Olympics?ref_src=twsrc%5Etfw). Where is the IOC? We must find out what happened to Dinigeer Yilamujiang. [https://t.co/KiZw00la1o](https://t.co/KiZw00la1o)
+> — Rick Scott (@SenRickScott) [February 10, 2022](https://twitter.com/SenRickScott/status/1491848855704457219?ref_src=twsrc%5Etfw)
+
+
+
+参议员瑞克·斯科特： 生态健康联盟帮助共产主义中国掩盖新冠的信息，而拜登政府却在毫无问责的情况下，将数百万纳税人的钱投入其中。 乔·拜登现在必须扭转这个可怕的决定。 （转华盛顿观察者：美国国际开发署在2021年底，向生态健康联盟提供了467万美元的资助）
+
+
+
+> .[@EcoHealthNYC](https://twitter.com/EcoHealthNYC?ref_src=twsrc%5Etfw) helped Communist China cover up information on COVID-19, yet the Biden administration is funneling it MILLIONS of taxpayer dollars with zero accountability. 
+> 
+> Joe Biden must reverse this horrible decision now. [https://t.co/lAEAWkN4Pe](https://t.co/lAEAWkN4Pe)
+> — Rick Scott (@SenRickScott) [February 10, 2022](https://twitter.com/SenRickScott/status/1491799799393177605?ref_src=twsrc%5Etfw)
+
+
+
+众议员吉姆·班克斯： 我很自豪能够与Herrel议员共同提出《停止资助我们的对手法案》。 美国纳税人不能也不应该向 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 或代表 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 进行的研究发送一分钱！ 【附每日电讯特别报道：共和党提出禁止资助在中共国的研究】
+
+
+
+> I'm proud to cosponsor [@RepHerrell](https://twitter.com/RepHerrell?ref_src=twsrc%5Etfw)'s Stop Funding Our Adversaries Act.
+>  
+> The American taxpayers cannot and should not be sending a single penny to research conducted by or on behalf of the [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw)![https://t.co/EkC0sGO5RH](https://t.co/EkC0sGO5RH)
+> — Jim Banks (@RepJimBanks) [February 10, 2022](https://twitter.com/RepJimBanks/status/1491868032456695814?ref_src=twsrc%5Etfw)
+
+
+
+众议员加拉格尔： 众议员加拉格尔与众议员布莱恩·斯蒂尔和其他 100 多名共和党人一起呼吁拜登总统立即对从中国和南部边境涌入的芬太尼采取行动。 在这里阅读更多： 【附福克斯新闻报道】
+
+
+
+> Rep. Gallagher joined [@RepBryanSteil](https://twitter.com/RepBryanSteil?ref_src=twsrc%5Etfw) and more than 100 other Republicans in calling on President Biden to take immediate action on fentanyl pouring in from China and across the southern border. 
+> 
+> Read more here: [https://t.co/fgjybJDS08](https://t.co/fgjybJDS08)
+> — Rep. Gallagher Press Office (@RepGallagher) [February 10, 2022](https://twitter.com/RepGallagher/status/1491881413636935701?ref_src=twsrc%5Etfw)
+
+
 
  
 
