--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,34 +1,24 @@
 ---
-title: 文贵先生2月10日盖特健身直播要点
+title: 郭文贵精品视频-冬奥会背后的秘密之习近平不过是普京的一个“托”
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1987671/)
+`cindy` [轉載自GNews](https://gnews.org/zh-hans/1987712/)
 
-整理：波士顿五月花 跟随战神
-![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图159.png)图片来自盖特截屏
-1.北京冬奥会共产党就是抢劫、耍流氓，以法耍流氓，会成为共产党的末日会
-2.以检测为名、以奥林匹克规则为名把芬兰运动员关起来，失去了获得冠军或者奖杯的权利
-3.芬兰运动员的经历就像七哥被大连法院炮制的强迫交易罪，能够给他赚几百亿并被罚款几百亿的强迫交易罪
-4.一位农行的老战友说，农行最好的一笔贷款就是当年盘古的，给了几十亿利息还提前还款，历史上没有过
-5.共产党就是利用法律，改变游戏规则、操纵游戏规则，这次冬奥会也是如此
-6.这个世界最终会有真理的，真相一定会出来，美国一定会明白过来
-7.PAG因为告七哥，共产党允许它在香港上市。就像UBS把七哥的股票卖了，获得外国银行在中国唯一的金融牌照
-8.PAG、UBS的事情大了，一切都是刚刚开始
-9.共产党要用法律黑掉我们，我们使用法律要世界知道真相
-10.谷爱凌母女两代人被共产党利用
-11.跟着共产党、相信共产党走进火葬场，过去百年历史包括俄罗斯、前苏联、德国、古巴、委内瑞拉和现在正在饿死人的阿富汗都证明了这一点
-12.尊重游戏规则、尊重法律是一个社会的底线，道德是人和畜生之间最低的底线
-13.冬奥会运动员连续5天吃一样的饭
-14.冬奥会人造雪造成严重污染，对大地、苍天、运动员、法律和道德都是巨大的伤害
-15.后人怎么看待当初的冬奥会，中国人怎么能在西方获得尊重，怎么能阻止排华，真的不敢想象
-16.参加冬奥会的很多国家政府官员想走走不了，不走痛苦不堪
-17.共产党在各国制造矛盾、蓝金黄，收买各种官员，通过律师事务所大渗透
-18.这个世界能这样下去吗？拿过共产党钱的、和共产党勾兑过的难道不被清算吗？当年和前苏联、希特勒勾兑的没有一个逃过制裁
-19.兄弟姐妹们，越是在这种情况下越要坚信你的正义，坚守法律的原则，尊重法律，坚守自己的道德底线
-20.多少战友能真正理解七哥灭共，七哥直播是流血，是冒着生命危险！否则共产党不会给七哥安那么多罪名并全球猎杀七哥。
+撰稿：澳喜cindy
 
-* * *
+北京冬奥会开幕几天来，前往北京参加奥运会的运动员和几个抱有幻想的政要越来越多的由期望到失望甚至彻底放弃对习近平原有的一点点信心。
 
-*编辑 /发布：吐纳*
+滑雪场的雪是假的，说好的合同内容承诺改口了，说好的助兴的人也不见那么多……
+
+
+
+仅仅用利益诱惑别人达到自己不切实际的目的只会是暂时的，不仅中国百姓的血汗钱毫无价值的浪费掉，还将失去的将是人家对你这个大国领导人的信任。平民百姓处事原则都是如此，更何况国家领导人、大国领导人、要做世界老大的人！
+
+普京是习近平一直以来在中国人面前给自己撑场子的人，居然说出了“习近平只是一个托”这样令人难堪的心里话。可悲的是习近平还不知，还要借普京的威望给自己涂脂抹粉、给自己壮胆、又是要打台湾又要拿下东南亚再拿下欧美，作世界75亿人的奴隶主。真的是自不量力！
+
+*编辑：cindy*
+
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
 
  
 
