--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,29 +1,36 @@
 ---
-title: 2021民主指数报告：中共国民生活在威权之下
+title: 美国：FBI警告美国运动员在北京冬季奥林匹克运动会上警惕中共的网络入侵
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1987622/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1987682/)
 
-![资料图：香港警察在逮捕《立场新闻》六名高管后站在该港媒办公楼外。（2021年12月19日）](https://gdb.voanews.com/44837EBD-190C-4D2B-94EF-6DBE48026C8B_w1023_r1_s.jpg)资料图：香港警察在逮捕《立场新闻》六名高管后站在该港媒办公楼外。（2021年12月19日）
-据美国之音2月11日报道，英国经济学人智库(EIU)10日公布2021年度民主指数报告称，全球只有不到一半的人口生活在民主体制下，民主状况跌至历史新低。EIU民主指数报告根据选举过程及多元化、政府运行、政治参与、政治文化以及公民权利五个方面进行评分，并划分为““充分民主”、“有瑕疵的民主”、“混合政权”和“威权”四个等级。报告显示，去年全球只有6.4%的人口生活在“充分民主”的国家和地区，超过三分之一的人口生活在威权统治之下，很大一部分在中共国。
+撰稿人： Lois
+翻译：一根筷子
+校对：sherryok (水云间）
 
-在对167个国家和地区的评判中，台湾全球排名第8，是亚洲唯一一个跻身前十的“充分民主”政体，居亚洲之首。中共国和香港的排名分别为第148名和第85名，分属“威权”和“混合政权”类别。美国排名第26，被归为“有瑕疵的民主”类别。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2115.png)
 
-因新冠疫情采取的隔离、封城和旅行限制等措施加剧了全球民主状况和公民自由史无前例的巨大倒退。但是，更多的情况是各国政府对待公民的强制和暴力行为。这不仅仅是民主状况，更是自由和生命被掠夺，是违反宪章的行为。全球自爆发疫情开始，没有采取任何治疗手段，只是强制推行疫苗。尽管有数据报告和科学家的研究表明，接种疫苗既不能产生有效的抗体，又不能阻止新冠病毒的传播，但是各国政府依然强制推进，甚至动用警察和部队的力量，以解雇、实施疫苗护照等手段强迫民众接种试验性疫苗，各国不断爆发政府和民众之间的冲突，示威抗议不断。自民主国家成立以来，从来没有出现过政府和民众如此对立的情况。根源就在于中共，解决了根源，恢复原有的民主和赋予威权国家民主和自由，世界才能恢复正常秩序，自由民主不再是一句口号。
+美国FBI建议所有参加2022年北京冬季奥林匹克运动会的美国运动员使用一次性手机而不是个人手机，考虑到可能来自中共的网络入侵。
 
-新闻参考链接：[https://www.voachinese.com/a/democracy-index-2021-20220209/6435993.html](https://www.voachinese.com/a/democracy-index-2021-20220209/6435993.html)
+一次性手机是一种便宜，可以预先充值的手机，当你不再使用时可以被销毁。
 
-编辑：胖丁
+加拿大政府也给过本国运动员相同的建议，将他们的个人手机留在家里。
 
-* * *
+政府同时警告运动员们只在比赛时将手机链接至官方网络，在不使用手机时关闭传输功能。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+“FBI督促所有的运动员将他们的个人手机留在家中，只在比赛期间使用临时手机。虽然没有重大的网络干扰，但是目前最流行的攻击手段是恶意软件，电子邮件欺诈，网络钓鱼以及使用虚假网站和流媒体服务，他们看起来像奥林匹克运动会指定服务商”，FBI在其发送的一份备忘录中陈述。
 
+“这些活动包括分布式拒绝服务（DDoS）攻击，勒索软件，恶意软件，社会工程，数据偷窃或泄露，网路钓鱼活动，虚假信息活动或者内部威胁，一旦成功，会破坏或者阻止现场直播，导致敏感数据泄露，或影响支持奥运会的公共或私人的数字基础设施”
 
-编辑：【英国伦敦喜庄园编辑部】
+据FBI的报告，在去年的东京奥林匹克运动会期间，有超过4.5亿次的黑客攻击。好在这些攻击都被网络警察一一击破。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+FBI也强调，强制使用数字钱包，比如中共病毒疫苗电子卡等也大大增加了运动员的设备被黑客入侵的威胁，运动员的个人信息会被窃取并被装上恶意软件。
+
+“下载和使用应用软件，包括那些参赛和逗留期间必须使用的软件，也会增加窃取个人信息、安装跟踪工具，恶意代码或者软件的机会”，备忘录中提到。
+
+为冬奥会运动员和游客设计的“My 2022 App“因为技术漏洞也存在隐私问题，给黑客提供了机会。
+
+**审核校对：Barry Jack
+上传排版：V在途中**
 
  
 
