--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,35 +1,34 @@
 ---
-title: 加拿大将寻求加入欧盟的行列应对中共国对立陶宛贸易争端的挑战
+title: 文贵先生2月10日盖特健身直播要点
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1987617/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1987671/)
 
-翻译：冰糖葫芦喵
+整理：波士顿五月花 跟随战神
+![](https://assets.gnews.org/wp-content/uploads/2022/02/屏幕截图159.png)图片来自盖特截屏
+1.北京冬奥会共产党就是抢劫、耍流氓，以法耍流氓，会成为共产党的末日会
+2.以检测为名、以奥林匹克规则为名把芬兰运动员关起来，失去了获得冠军或者奖杯的权利
+3.芬兰运动员的经历就像七哥被大连法院炮制的强迫交易罪，能够给他赚几百亿并被罚款几百亿的强迫交易罪
+4.一位农行的老战友说，农行最好的一笔贷款就是当年盘古的，给了几十亿利息还提前还款，历史上没有过
+5.共产党就是利用法律，改变游戏规则、操纵游戏规则，这次冬奥会也是如此
+6.这个世界最终会有真理的，真相一定会出来，美国一定会明白过来
+7.PAG因为告七哥，共产党允许它在香港上市。就像UBS把七哥的股票卖了，获得外国银行在中国唯一的金融牌照
+8.PAG、UBS的事情大了，一切都是刚刚开始
+9.共产党要用法律黑掉我们，我们使用法律要世界知道真相
+10.谷爱凌母女两代人被共产党利用
+11.跟着共产党、相信共产党走进火葬场，过去百年历史包括俄罗斯、前苏联、德国、古巴、委内瑞拉和现在正在饿死人的阿富汗都证明了这一点
+12.尊重游戏规则、尊重法律是一个社会的底线，道德是人和畜生之间最低的底线
+13.冬奥会运动员连续5天吃一样的饭
+14.冬奥会人造雪造成严重污染，对大地、苍天、运动员、法律和道德都是巨大的伤害
+15.后人怎么看待当初的冬奥会，中国人怎么能在西方获得尊重，怎么能阻止排华，真的不敢想象
+16.参加冬奥会的很多国家政府官员想走走不了，不走痛苦不堪
+17.共产党在各国制造矛盾、蓝金黄，收买各种官员，通过律师事务所大渗透
+18.这个世界能这样下去吗？拿过共产党钱的、和共产党勾兑过的难道不被清算吗？当年和前苏联、希特勒勾兑的没有一个逃过制裁
+19.兄弟姐妹们，越是在这种情况下越要坚信你的正义，坚守法律的原则，尊重法律，坚守自己的道德底线
+20.多少战友能真正理解七哥灭共，七哥直播是流血，是冒着生命危险！否则共产党不会给七哥安那么多罪名并全球猎杀七哥。
 
-编辑与校对：冰糖葫芦喵、灭共文明
+* * *
 
-**《路透社》2月10日报道，周四，加拿大全球事务部在一份声明中表示，加拿大将寻求加入英国、美国和澳大利亚的行列，就中共国在世界贸易组织对立陶宛的贸易限制的争端解决磋商。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/加拿大欧盟-e1644548407150.jpg)欧盟与加拿大签署自由贸易协定（图片来源：网络）
-在该声明中，加拿大对中共国最近针对立陶宛和欧盟具有立陶宛成分的商品和服务采取的贸易行动感到担忧，这可能会破坏基于规则的国际贸易体系及其机构。
-
-**1月27日，欧盟就中共国针对立陶宛采取的“歧视性贸易”做法向世贸组织提起诉讼，**并向总部设在日内瓦的贸易机构发起挑战，指责中共国对立陶宛的歧视性贸易行为，称其威胁到欧盟单一市场的完整性。
-
-此前，立陶宛允许民主台湾在维尔纽斯开设事实上的大使馆之后，中共国已经降低了与立陶宛的外交关系，并向跨国公司施压，要求它们切断与这个拥有280万人口的波罗的海国家的联系。
-
-报道中称，在世贸组织的挑战中，双方有60天的时间进行协商，以达成解决方案。如果没有达成任何协议，欧盟可以选择发起正式的争端，成立一个世贸组织小组来研究其对中共国的主张。
-
-**加拿大政府表示，它反对 “经济胁迫”，并与世贸组织的 “志同道合的伙伴一起支持基于规则的国际贸易”。**
-
-评论：
-
-一直以来，**加拿大**在对中共的态度上表现比较软弱，但是**这次也同欧盟一起站在了对抗中共霸凌的一方。这充分表明，中共在国际上遭遇空前孤立。**
-
-**加拿大作为民主国家会本能的站在公平贸易、反对贸易霸凌和经济胁迫，维护国际公认的贸易准则，发对秩序的破坏者。**
-
-新闻链接：
-
-[Canada seeks to join EU challenge against China at WTO | Reuters](https://www.reuters.com/world/europe/canada-seeks-join-eu-challenge-against-china-wto-2022-02-10/)
-
-
+*编辑 /发布：吐纳*
 
  
 
