--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,40 +1,36 @@
 ---
-title: 通货膨胀年率飙升 7.5%，1982 年以来的最高水平
+title: 加拿大卡车“自由车队”封锁了大使桥导致福特汽车关闭
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1986866/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1987291/)
 
-**译评：Elli**
+翻译：冰糖葫芦喵
 
-2022年1 月份所有项目的消费者价格指数上涨 0.6%，将年度通胀率推高至 7.5%。这是自 1982 年 2 月以来的最大涨幅，核心通胀上升 6%，甚至高于华尔街预估。考虑到通货膨胀因素，当月工人的实际收入仅增长了 0.1%。每周申请失业救济人数下降至 223,000 人，低于预期的 230,000 人。
+编辑与校对：冰糖葫芦喵、灭共文明
 
-过去 12 个月，消费者价格涨幅超过预期，表明通胀前景恶化，并加深了美联储今年大幅加息的可能性。
+“Just the news” 2月10日报道，**和平抗议中共病毒强制措施的加拿大卡车司机“自由车队”连续第三天封锁了大使桥。**由于零部件短缺，福特公司被迫关闭了温莎的发动机工厂，并将位于安大略省奥克维尔(Oakville)的一家组装工厂的工期缩短。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/加拿大大使桥2-e1644540569960.jpg)加拿大卡车司机在渥太华和平抗议（来源：每日邮报）
+报道指出，这些和平抗议者在加拿大和底特律之间的桥梁上列队，导致安大略温莎和底特律之间的交通中断。除此之外，进入美国的交通没有受到阻碍。这座大桥支撑着美国和加拿大之间25%的贸易。
 
-美国劳工部周四报告称，衡量数十种日常消费品成本的 1 月份消费者价格指数与一年前相比上涨了 7.5%。相比之下，受到密切关注的通胀指标道琼斯估计为 7.2%。 这是自 1982 年 2 月以来的最高读数。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1059.png)消费者指数，图片来源：[Bureau of Labor Statistics/CNBC](https://www.cnbc.com/2022/02/10/january-2022-cpi-inflation-rises-7point5percent-over-the-past-year-even-more-than-expected.html)
-报告发布后，股市期货下跌，对利率敏感的科技股受到的打击尤其严重。 政府债券收益率大幅上涨，基准 10 年期美国国债收益率触及 2%，为 2019 年 8 月以来的最高水平。
+福特公司在一份声明中表示，底特律-温莎大桥的中断会对美国和加拿大民众、供应商、社区和企业产生广泛影响，希望这种情况能够迅速得到解决。
 
-市场对未来加息的定价也变得更加激进。
+美国密歇根州兰辛附近的通用汽车公司发言人说，目前不会受到额外影响，生产将于周四重启。
 
-根据芝加哥商品交易所的数据，3 月份美联储加息 0.5 个百分点的可能性在数据发布后升至 44.3%，而此前为 25%。 今年加息六分之一个百分点的可能性上升至约 63%，而发布前约为 53%。
+丰田汽车公司表示，加拿大的三家工厂在本周剩余时间内将无法生产任何产品，不过该公司将问题归咎于供应链问题和天气问题。
 
-按百分比计算，燃料油2022年 1 月份涨幅最大，飙升 9.5%，同比增长 46.5%。 本月能源成本总体上涨 0.9%，同比上涨 27%。
+**本周，阿尔伯塔省、新斯科舍省、爱德华王子岛省、萨斯喀彻温省和魁北克省，宣布计划取消对中共病毒的部分限制，但特鲁多仍不愿在疫苗强制的问题上让步**。
 
-美国凯投宏观（Capital Economics）资深经济学家Andrew Hunter表示，本月食品成本上涨 0.9%，相比过去一年上涨 7%。食品和住房价格上涨的这种结合“突显了我们的观点，即通货膨胀正在迅速周期性加速，并且是在劳动力市场条件异常紧张的情况下”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1058.png)主要股指2022年2月10日变化，截止至2022年2月10日5.05pm EST. 图片来源：[CNBC](https://www.cnbc.com/markets/)
-**评：**文贵先生在大直播中强调**面包**和**汽油**的价格对美国经济稳定至关重要，不论穷人富人，这两样都是必须支出。今天发布的7.5%的高通胀率让股市震荡但又在我们的预计之中。相比之下，以比特币为代表的加密货币今早涨至区域高点45600美金，开始与股票等风险资产脱钩，并作为对冲通货膨胀的金融资产被市场认购。金融危机进一步加深之际，市场上除了喜币和G系列，所有资产包括贵金属，加密货币都可能短期剧烈下跌，但之后的反弹也是快速的。
+虽然温莎政府的领导人表示，他们不会允许桥梁堵塞持续“很长一段时间”，但一名抗议组织者周三表示，“媒体严重低估了卡车司机的决心和耐心。”
 
-**原文链接：**
-[Inflation surges 7.5% on an annual basis, even more than expected and highest since 1982. CNBC.](https://www.cnbc.com/2022/02/10/january-2022-cpi-inflation-rises-7point5percent-over-the-past-year-even-more-than-expected.html)
+据报道称**，目前，抗议特鲁多自由党政府边境疫苗强制命令的卡车司机们，封锁了阿尔伯塔省库茨的边境通道，400多辆卡车继续在加拿大首都渥太华市中心和平抗议。**
 
-**编辑：LILY**
+小编评论：
 
-**发布：MQ**
+**自由党特鲁多政府仍然顽固推行疫苗强制政策，是导致抗议活动持续的根本原因。**加拿大卡车司机是在维护宪法赋予公民的基本权益，是100%合法和正义的行动。
 
-20220210
+加拿大政府已经全面动用了国家权力机构，包括警察，采取许多卑鄙的手段，不断干扰和破坏他们的和平抗议行动。其目的已经不单是强推疫苗，而是担心他们的独裁统治受到正义联盟的挑战与威胁。
 
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/農場文宣-3-4.jpg)
+**随着病毒和疫苗真相的揭露，会有更多的加拿大民众觉醒，站出来支持卡车司机对抗暴政，加拿大必将回归到原本的自由与民主的价值观。**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
