--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,24 +1,27 @@
 ---
-title: 中共海关即日起暂停进口立陶宛牛肉
+title: 有声&#124;美国再将33家中共企业列入未经核实清单
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987704/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1987745/)
 
-**撰稿：日本东京方舟农场  海星**
+配音：香草山健身部 – 玫瑰园
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月7日，据相关媒体消息显示，美国政府已经将包括中共国航发南方工业有限公司在内的33家中共实体列入至“未经核实清单”中。
 
-2月10日，中共海关决定即日起暂停从立陶宛进口牛肉。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-164.jpg)（图片来源：星岛网）
-据《路透社》报导，中共海关官网更新了《符合评估审查要求的国家或地区输华肉类产品名单》，该名单显示，自2月9日后中共暂停接受立陶宛牛肉的进口申报。此举意味着中共可能再次违反了WTO贸易规则。
+对此，美国商务部表示，联邦政府采取这一措施的原因在于，美国无法确定这些中共实体将如何使用其自美国进口的商品。
 
-此前，欧盟因中共禁止进口立陶宛货物的行为公然违反WTO贸易规则，而正式向WTO起诉中共。
+文字版原文：[美国再将33家中共企业列入未经核实清单](https://gnews.org/zh-hans/1984848/)
 
-参考链接：
-1.[https://cn.reuters.com/article/china-custom-lithuania-beef-0210-idCNKBS2KF08F](https://cn.reuters.com/article/china-custom-lithuania-beef-0210-idCNKBS2KF08F)
-2.[https://gnews.org/zh-hans/1920547/](https://gnews.org/zh-hans/1920547/)
+音频处理/发稿：Daxia
 
-素材采编：海星
-编辑：老孙
-发布：爱放飞
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
 
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
