--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,36 +1,67 @@
 ---
-title: 美国：FBI警告美国运动员在北京冬季奥林匹克运动会上警惕中共的网络入侵
+title: 蓬佩奥： 台湾绝对不是中国的内政
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1987682/)
+`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1987732/)
 
-撰稿人： Lois
-翻译：一根筷子
-校对：sherryok (水云间）
+前国务卿迈克.蓬佩奥： 台湾绝对不是中国的内政。 我们必须让中共明白我们将采取任何必要行动来确保台湾保持自由。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2115.png)
 
-美国FBI建议所有参加2022年北京冬季奥林匹克运动会的美国运动员使用一次性手机而不是个人手机，考虑到可能来自中共的网络入侵。
 
-一次性手机是一种便宜，可以预先充值的手机，当你不再使用时可以被销毁。
+> Taiwan is absolutely NOT an affair internal to China. We must ensure the CCP understands that we will undertake any actions necessary to ensure Taiwan remains free.
+> — Mike Pompeo (@mikepompeo) [February 10, 2022](https://twitter.com/mikepompeo/status/1491855779284103171?ref_src=twsrc%5Etfw)
 
-加拿大政府也给过本国运动员相同的建议，将他们的个人手机留在家里。
 
-政府同时警告运动员们只在比赛时将手机链接至官方网络，在不使用手机时关闭传输功能。
 
-“FBI督促所有的运动员将他们的个人手机留在家中，只在比赛期间使用临时手机。虽然没有重大的网络干扰，但是目前最流行的攻击手段是恶意软件，电子邮件欺诈，网络钓鱼以及使用虚假网站和流媒体服务，他们看起来像奥林匹克运动会指定服务商”，FBI在其发送的一份备忘录中陈述。
+众议员加拉格尔新闻办公室： 加拉格尔说:“国际奥委会的可鄙行径。他们最近会见了彭帅，并声称回答了“彭帅在哪里?”她在哪儿?她被中共扣留了。她被封口了。她被扣为人质，国际奥委会在其中狼狈为奸。”
 
-“这些活动包括分布式拒绝服务（DDoS）攻击，勒索软件，恶意软件，社会工程，数据偷窃或泄露，网路钓鱼活动，虚假信息活动或者内部威胁，一旦成功，会破坏或者阻止现场直播，导致敏感数据泄露，或影响支持奥运会的公共或私人的数字基础设施”
 
-据FBI的报告，在去年的东京奥林匹克运动会期间，有超过4.5亿次的黑客攻击。好在这些攻击都被网络警察一一击破。
 
-FBI也强调，强制使用数字钱包，比如中共病毒疫苗电子卡等也大大增加了运动员的设备被黑客入侵的威胁，运动员的个人信息会被窃取并被装上恶意软件。
+> Rep. Gallagher: "The IOC has acted despicably. They recently met with Peng Shuai and claimed to answer the question 'Where is Peng Shuai?' Well, where is she? She's being detained by the CCP. She's being silenced. She's being held hostage, and the IOC is complicit in it all." [pic.twitter.com/oDflLN887R](https://t.co/oDflLN887R)
+> — Rep. Gallagher Press Office (@RepGallagher) [February 10, 2022](https://twitter.com/RepGallagher/status/1491833496083611649?ref_src=twsrc%5Etfw)
 
-“下载和使用应用软件，包括那些参赛和逗留期间必须使用的软件，也会增加窃取个人信息、安装跟踪工具，恶意代码或者软件的机会”，备忘录中提到。
 
-为冬奥会运动员和游客设计的“My 2022 App“因为技术漏洞也存在隐私问题，给黑客提供了机会。
 
-**审核校对：Barry Jack
-上传排版：V在途中**
+参议员瑞克·斯科特： 共产主义中国把这个可怜的运动员当做2022年冬奥会的道具。这都是习的邪恶宣传，用“奥运会”来粉饰他的种族灭绝和压迫。国际奥委会在哪里?我们必须弄清楚迪尼吉尔·依拉穆江身上发生了什么事。 （转每日电讯：维吾尔族滑雪选手，中国冬奥会火炬手，在北欧联合赛首秀后“消失”了）
+
+
+
+> Communist China used this poor athlete as a prop for [@Beijing2022](https://twitter.com/Beijing2022?ref_src=twsrc%5Etfw). It’s all part of Xi’s evil propaganda to whitewash his genocide & oppression with the [@Olympics](https://twitter.com/Olympics?ref_src=twsrc%5Etfw). Where is the IOC? We must find out what happened to Dinigeer Yilamujiang. [https://t.co/KiZw00la1o](https://t.co/KiZw00la1o)
+> — Rick Scott (@SenRickScott) [February 10, 2022](https://twitter.com/SenRickScott/status/1491848855704457219?ref_src=twsrc%5Etfw)
+
+
+
+参议员瑞克·斯科特： 生态健康联盟帮助共产主义中国掩盖新冠的信息，而拜登政府却在毫无问责的情况下，将数百万纳税人的钱投入其中。 乔·拜登现在必须扭转这个可怕的决定。 （转华盛顿观察者：美国国际开发署在2021年底，向生态健康联盟提供了467万美元的资助）
+
+
+
+> .[@EcoHealthNYC](https://twitter.com/EcoHealthNYC?ref_src=twsrc%5Etfw) helped Communist China cover up information on COVID-19, yet the Biden administration is funneling it MILLIONS of taxpayer dollars with zero accountability. 
+> 
+> Joe Biden must reverse this horrible decision now. [https://t.co/lAEAWkN4Pe](https://t.co/lAEAWkN4Pe)
+> — Rick Scott (@SenRickScott) [February 10, 2022](https://twitter.com/SenRickScott/status/1491799799393177605?ref_src=twsrc%5Etfw)
+
+
+
+众议员吉姆·班克斯： 我很自豪能够与Herrel议员共同提出《停止资助我们的对手法案》。 美国纳税人不能也不应该向 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 或代表 [#中共](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1?src=hashtag_click) 进行的研究发送一分钱！ 【附每日电讯特别报道：共和党提出禁止资助在中共国的研究】
+
+
+
+> I'm proud to cosponsor [@RepHerrell](https://twitter.com/RepHerrell?ref_src=twsrc%5Etfw)'s Stop Funding Our Adversaries Act.
+>  
+> The American taxpayers cannot and should not be sending a single penny to research conducted by or on behalf of the [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw)![https://t.co/EkC0sGO5RH](https://t.co/EkC0sGO5RH)
+> — Jim Banks (@RepJimBanks) [February 10, 2022](https://twitter.com/RepJimBanks/status/1491868032456695814?ref_src=twsrc%5Etfw)
+
+
+
+众议员加拉格尔： 众议员加拉格尔与众议员布莱恩·斯蒂尔和其他 100 多名共和党人一起呼吁拜登总统立即对从中国和南部边境涌入的芬太尼采取行动。 在这里阅读更多： 【附福克斯新闻报道】
+
+
+
+> Rep. Gallagher joined [@RepBryanSteil](https://twitter.com/RepBryanSteil?ref_src=twsrc%5Etfw) and more than 100 other Republicans in calling on President Biden to take immediate action on fentanyl pouring in from China and across the southern border. 
+> 
+> Read more here: [https://t.co/fgjybJDS08](https://t.co/fgjybJDS08)
+> — Rep. Gallagher Press Office (@RepGallagher) [February 10, 2022](https://twitter.com/RepGallagher/status/1491881413636935701?ref_src=twsrc%5Etfw)
+
+
 
  
 
