--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,76 +1,37 @@
 ---
-title: 币圈新闻动态：喜币（HCN）价格目前在48.500 HDO
+title: “我已变得骨瘦如柴”：俄罗斯运动员声称北京冬奥会的食物差得难以置信
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1987603/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987632/)
 
-*喜马拉雅华盛顿DC 编辑：aQ*
+**翻译：日本东京方舟农场 乾坤一掷**
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/07/ScreenShot-2021-07-31-at-16.20.22@2x.png)
+尽管与奥运会有关的人员和运动员中的 COVID-19 病例激增，中共正在因为北京举办的 2022 年冬季奥运会面临来自各方的批评。 奥运会上的新问题现已曝光，因为一名俄罗斯运动员声称在奥运会上为 COVID-19 阳性运动员提供的食物“不可食用”且“无法食用”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-162.jpg)（圖片來源：wionews.com）
+在北京奥运会上，被隔离的运动员们指控饭菜不能吃、运动员食物不够、训练设备不足等，他们抨击奥运组织者的不公平待遇。 俄罗斯冬季两项选手瓦斯涅佐娃（Valeria Vasnetsova）已经在北京冬季奥运会期间被检测出 COVID-19 呈阳性，她在 Instagram 上分享了她的恐怖故事。
 
+瓦斯涅佐娃在她的 Instagram分享了一张在北京一家隔离酒店为她提供食物的照片。在她分享的照片中，一盘食物包括普通的意大利面、几个土豆、骨头上烧焦的肉和橙汁。瓦斯涅佐娃说，“这已经是五天的早餐、午餐和晚餐了”。
 
+这位俄罗斯人声称，自从被隔离以来，她每天都在哭，而且由于缺乏营养和适当的饮食，她的骨头已经开始凸显。她声称她“累了”，并希望这一切尽快结束。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2-40.jpg)（圖片來源：wionews.com）
+“我的胃很痛，脸很苍白，我的眼睛周围有巨大的黑眼圈。我希望这一切结束。我每天都在哭。我很累，”瓦斯涅佐娃在她的 Instagram 上分享了这段话，并且附带了一张食物的图片。
 
-## 每日一问
+她声称她靠几块意大利面勉强维持生计，但在分享照片的那天，她不得不吃掉所有提供给她的脂肪，因为她非常饿，而且体重下降的非常的明显。 “但今天我吃了他们提供的所有脂肪而不是肉，因为我非常饿。我已经饿的皮包骨头了。
 
+瓦斯涅佐娃还在她的帖子中发表了令人震惊的消息，声称与北京隔离酒店中的正常奥运会相关人员相比，COVID-19 检测呈阳性的运动员所受到的服务更差且餐食质量更加低劣。
 
+她透露，在隔离旅馆门外捡起留给她的食物时，她注意到留在走廊其他房间外面的盒子不一样。门上贴有标志，以区分奥运选手和奥运会工作人员。俄罗斯人声称提供给非运动员的食物不同，运动员的盒子里的食物更差。
 
+她还向她的团队医生分享了食物的详细信息，该团队医生的 COVID-19 检测结果也呈阳性，并被隔离在同一家酒店。瓦斯涅佐娃说，队医得到了新鲜水果、沙拉和西兰花虾。 “我真的不明白，为什么对我们运动员是这种态度？” – 俄罗斯人报写道。
 
+组织者迅速解决了瓦斯涅佐娃所关心的问题，根据美联社的报道，俄罗斯冬季两项队发言人谢尔盖·阿维扬诺夫证实为她提供更好的食物。他还补充说，运动员还将很快获得一辆健身自行车进行训练。
 
-三星发布新手机支持加密货币，加密货币普及化还远吗?
+原文链接：
+[https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017](https://www.wionews.com/sports/my-bones-are-sticking-out-i-cry-every-day-russian-athlete-claims-food-at-beijing-winter-olympics-inedible-451017)
 
+素材采编：妙喜小油鍋
+校对：妙喜小油鍋
+发布：爱放飞
 
-
-
-
-## 喜马拉雅交易所要闻
-
-
-
-
-
-- 喜交所网站行情显示，喜币（HCN）价格目前在48.500 HDO，24H最高价格为48.830 HDO，24H最低价格为48.190 HDO，24H成交量约为55,927.418 HCN。
-
-
-
-
-
-
-## 新闻动态
-
-
-
-
-
-1. CoinDesk报道，Chainalysis数据显示，去年勒索软件的平均支付规模达到11.8万美元，高于2020年的8.8万美元，2019年仅为2.5万美元。Chainalysis研究负责人Kim Grauer将这一增长归因于勒索软件团队的日益成熟。在过去的两年里，勒索软件攻击激增。Chainalysis已确定，在2020年与勒索软件团伙有关联的钱包地址收到价值6.92亿美元的款项，2021年则收到6.02亿美元。然而，Grauer强调，随着Chainalysis继续识别与勒索软件相关的钱包，实际数字可能会高得多，2021年勒索软件支付规模创下新纪录。
-2. 2月11日消息，元宇宙项目Everyrealm宣布完成6000万美元A轮融资。据悉，Everyrealm通过投资、管理和开发资产塑造元宇宙，包括NFT、虚拟房地产、元宇宙平台、游戏和基础设施等。
-3. Coindesk报道，Kyro Digital已经完成了1000万美元的A轮融资，Kyro Digita表示，它正在建设基础设施，为NFT和DAO创建加密货币支持的店面。据悉，Avalanche、Polygon、Rally和Tezos链的加密风险基金参与了本轮融资。Decasonic、Drive Capital和分布式资本提供战略投资。
-4. Decrypt报道，元宇宙投资公司Republic Realm宣布更名为Everyrealm，并完成6000万美元A轮融资。个人投资者名单中还包括一系列名人和娱乐偶像，包括说唱歌手Nas和Lil Baby，社会名流和真人秀电视明星（NFT创始人）Paris Hilton，KISS摇滚歌手Gene Simmons，以及电影制片人Jeffrey Katzenberg。此外The Sandbox联合创始人兼首席运营官Sebastien Borget以及Axie Infinity联合创始人Jeff Zirlin也参与了投资。
-5. VentureBeat报道，初创公司Strider完成300万美元融资，1kx领投，Decasonic、Scalar Capital、Sfermion、Metaorient、Yield Guild Games（YGG）、Axie Infinity联合创始人Jeffrey“Jihoz”Zirlin、Polygon联合创始人Jaynti“JD”Kanani参投。Strider正在创建一个Web3平台，让创作者可以使用DAO管理其项目。
-6. VentureBeat报道，Ethernity宣布已为其新工作室Ethernal Labs融资2000万美元，Black Edge Capital、前《英雄联盟》制作人Thomas Vu、Kenetic、前谷歌首席执行官Eric Schmidt、Morningstar Ventures、Fanatics老板Michael Rubin和Polygon Studios等参投。Ethernal Labs是一个技术工作室和孵化器，致力于帮助其他人推出自己的NFT和代币，并加入元宇宙。Ethernal Labs的目标是成为一个平台，通过认证市场、头像创作和P2E游戏帮助其他项目方进入元宇宙。
-7. 官方消息，Humanode完成200万美元种子轮融资，Republic Capital领投，Tribe Capital、Avalanche、Wintermute、Shima Capital、Genblock Capital、Gravity X Capital、AU21和StaFi等机构以及来自Supraoracles的Heslin等个人投资者以及Polygon联合创始人Jaynti和Sandeep等参投。Humanode是Paradigm的内部项目，是利用基于生物特征识别密码的共识机制的区块链项目，以实现其目标：一个人=一个节点=一票，以克服现代加密经济学和治理中的各种已知问题。
-8. 2月10日消息，预言机解决方案Pyth Network与AAX交易所达成合作。AAX交易所将提供实时的加密货币市场数据，相关集成预计将在本月内完成。
-9. Beincrypto报道，韩国电子巨头三星发布其最新旗舰智能手机，该手机支持加密货币相关功能。三星在其“Unpacked 2022”虚拟活动中公布三星钱包，该活动还展示其Galaxy S22 Ultra智能手机。该钱包据称能够“访问和探索复杂的数字产品”，例如加密货币。它还可以安全地存储个人身份证明，例如学生证、驾照和身份证，以及数字房屋或汽车钥匙、信用卡和借记卡、登机牌和疫苗接种记录。这款安全支付钱包将与该公司的支付平台Samsung Pay配合使用。其安全性由三星的Knox Vault平台提供，该平台对敏感信息和区块链密钥进行加密，并将其与手机的主要操作系统隔离开来。
-10. Blockworks报道，澳大利亚向澳大利亚加密会计和税务咨询公司KovaTax提供一笔政府拨款，用于开发纳税申报软件Syla。根据周二发布的公告，第二轮“促进女性创始人倡议（Boosting Female Founders Initiative）”已向Kovatax的Syla平台授予387550澳元（约合277929美元）的赠款。
-11. 2月11日消息，跨链聚合协议OpenOcean发推称，Fantom链上多链DEX聚合器Rango已集成Open Ocean API，此举将为用户提供更好的用户体验。
-12. 2月11日消息，以太坊扩容解决方案Optimism今日发布博客表示，其团队在2月2日收到Jay Freeman的警告，称Optimism的Geth分叉中存在关键性漏洞，使得通过重复触发持有ETH余额的合约上的SELFDESTRUCT操作码，可以在Optimism上创建ETH。对Optimism链历史的分析表明，该漏洞未被利用。在确认问题后的数小时内，Optimism对该漏洞修复进行了测试并部署至Optimism的Kovan网络和主网。同时还提醒多个易受攻击的Optimism分叉和桥接提供商注意该问题的存在，这些项目现在都应用了所需的修复。官方还表示，如果有相关方正在运行一个副本，请确保尽快升级到l2geth版本0.5.11，否则可能会与网络的其他部分失去同步。作为官方Immunefi漏洞赏金计划的一部分，Optimism表示将向漏洞披露者提供最高2000042美元的赏金。
-13. Bitcoin.com报道，哈萨克斯坦总统Kassym-Jomart Tokayev已指示当局查明所有加密挖矿企业，并提高他们需要支付的电费附加费。Tokayev坚称，国家并不反对合法的挖矿活动，但加密矿场应该获得许可并需要纳税。电力短缺已经迫使一些挖矿公司离开哈萨克斯坦，加密矿工现在面临着增税和更严格的监管。在本周与部长们的一次会议上，总统Tokayev命令政府在4月1日之前制定全面的行业法规，确保行业成员履行自己的义务。此前消息，据当地新闻媒体Kazinform报道，哈萨克斯坦当局正在考虑将加密货币矿企的电力税从1坚戈提高到5坚戈（0.0023美元至0.012美元），增幅4倍。
-14. Cointelegraph报道，加拿大下议院议员Michelle Rempel Garner提出了一项法案，建议政府建立一个框架，鼓励加密货币行业在该国的发展。在周三下议院对C-249号法案的一读中，Garner提议让加拿大财政部长克里斯蒂娅-弗里兰与行业专家协商制定一个监管框架，旨在促进围绕加密货币的创新。该法案名为”鼓励加密资产行业发展法案”，还将要求财政部长就该框架提出报告，并在通过后的三年内提出立法。该法案称，”加密资产对加拿大具有重大的经济和创新潜力。
-15. Finextra报道，HoFT基金会、普华永道卢森堡公司在卢森堡基金业协会（ALFI）的积极支持下，出版一份关于卢森堡加密资产行业的全面市场研究。报告显示，2021年对加密资产来说是杰出的一年。比特币达到了历史性的市值门槛，NFT市场飞速发展，比特币首次被一个主权国家采纳为法定货币。在卢森堡的金融服务领域，围绕着加密资产的热情和务实的态度并存：我们61%的受访者已经在评估、开发或提供加密资产产品/服务。
-16. Finextra报道，英国的一项新倡议正在寻求推进零售央行数字货币（CBDC）的案例，发布了一份绿皮书并准备了一套试点。英格兰银行和英国财政部一直在积极寻求建立中央银行数字货币的案例，被称为Britcoin，因为现金的使用不断减少，私人数字货币对货币主权构成威胁。然而，这个想法受到了很大的阻力，最近的一次是来自上议院的一个贵族委员会，该委员会上个月得出结论，数字英镑没有令人信服的理由。
-17. 2月11日消息，俄罗斯政府似乎正在为比特币和加密采矿业的合法化和监管奠定基础——并且已经在计划让矿工向海外买家出售代币的一种方式，即使在该国开始监管加密货币之后也是如此交易。据报道，在总统普京的直接干预下，财政部与坚决反对加密货币的中央银行之间的长期僵局似乎已经结束。据报道，各方现在赞成一项法案草案，该草案将寻求消除加密领域的匿名性，并迫使加密交易所向新的超级监管机构注册。
-18. Blockworks报道，美国商品期货交易委员会（CFTC）主席Rostin Behnam周三在参议院委员会听证会上表示，CFTC要求追加1亿美元联邦预算以支持其对数字资产现金商品市场的监管。Bankman表示，目前监管错综复杂，没有明确的监管机构，意味着消费者面临风险、系统性风险和行业缺乏明确性。
-19. TheBlock报道，美国新罕布什尔州州长克里斯•苏努努（Chris Sununu）宣布成立一个新的州委员会，重点研究加密货币及其影响，以及该州可能希望执行的立法类型。根据2月9日的一项行政命令，该委员会将对管辖加密货币和其他数字资产的现行州法律法规的作用和有效性、对此类法律法规进行修改和改进的原因等领域作出调查和决定。该委员会将包括来自州银行部、总检察长办公室、州议会两院的利益相关者，以及“三位在加密货币、数字资产以及向机构或消费者提供数字资产服务方面具有公认经验的公众成员”。在接下来的几个月里，该委员会将编写一份关于其调查结果的报告，然后将公布于众。
-20. 2月11日消息，圣路易斯联储官员布拉德称，支持在7月初前累计加息100个基点，包括自2000年以来首次一次性加50个基点，以应对四十年来最严重的通胀。今年拥有货币政策投票权的布拉德周四接受采访时表示，“我本来就更偏鹰派，但还是大幅提高了对委员会应该怎么做的预期。”目前，布拉德的计划包括分三次实施加息，从第二季度开始缩表，然后基于最新数据决定下半年的利率路径。他表示，自己尚未决定好3月会议是否该加息50个基点，将尊重鲍威尔的决定。鲍威尔曾在1月新闻发布会上表示不排除这样做的可能。
-21. News.bitcoin报道，哈萨克斯坦总统Kassym-Jomart Tokayev已指示当局查明所有加密采矿企业，并提高他们需要支付的电费附加费。Tokayev坚持认为，国家并不反对合法的采矿活动，但加密农场应该获得许可和征税。
-
-
-
-
-
-*编辑：aQ
-发布：文顾*
-
-
- 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
