--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,49 +1,29 @@
 ---
-title: 走出戈壁的“幸运”间谍——单伟健
+title: 2021民主指数报告：中共国民生活在威权之下
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1987596/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1987622/)
 
-**撰稿：日本东京方舟农场 青城道姑**
+![资料图：香港警察在逮捕《立场新闻》六名高管后站在该港媒办公楼外。（2021年12月19日）](https://gdb.voanews.com/44837EBD-190C-4D2B-94EF-6DBE48026C8B_w1023_r1_s.jpg)资料图：香港警察在逮捕《立场新闻》六名高管后站在该港媒办公楼外。（2021年12月19日）
+据美国之音2月11日报道，英国经济学人智库(EIU)10日公布2021年度民主指数报告称，全球只有不到一半的人口生活在民主体制下，民主状况跌至历史新低。EIU民主指数报告根据选举过程及多元化、政府运行、政治参与、政治文化以及公民权利五个方面进行评分，并划分为““充分民主”、“有瑕疵的民主”、“混合政权”和“威权”四个等级。报告显示，去年全球只有6.4%的人口生活在“充分民主”的国家和地区，超过三分之一的人口生活在威权统治之下，很大一部分在中共国。
 
-**“****幸运****”****间谍《走出戈壁》**
+在对167个国家和地区的评判中，台湾全球排名第8，是亚洲唯一一个跻身前十的“充分民主”政体，居亚洲之首。中共国和香港的排名分别为第148名和第85名，分属“威权”和“混合政权”类别。美国排名第26，被归为“有瑕疵的民主”类别。
 
-2021年6月，这位所谓的知名金融家、投资人高调推出了自己的中文版回忆录《走出戈壁》。美国财政部长耶伦为其《走出戈壁》一书写的推荐语更是耐人寻味：“他的人生经历，哪怕只是机缘巧合，也显示出中美两国走的一起将足以成就任何可能。”单伟建所经历的“机缘巧合”的“幸运”，几乎让那个年代所有知青相形见绌，哪怕是现任中共国主席、书记的习近平看到后，也会羡慕不已。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-161.jpg)2022年2月8日，有媒体曝出，数百名华裔美国人同时写信给联邦调查局，揭发太平洋联盟集团（PAG）董事长兼首席执行官单伟建，是共产主义中国顶级间谍。该消息出台后，引起大量关注。
-据单伟健《走出戈壁》一书介绍，他的父亲出生在山东寒苦农家，在旧中国战火纷飞，老百姓屡遭饥寒困扰的时代，依然坚持阅读，熟读《史记》《资治通鉴》等古书，并成为中国海关总署的职员，与单伟建的母亲一起成为了驻京对外经贸大员。不得不说，单伟健的父母也是那个年代中最幸运的人。
+因新冠疫情采取的隔离、封城和旅行限制等措施加剧了全球民主状况和公民自由史无前例的巨大倒退。但是，更多的情况是各国政府对待公民的强制和暴力行为。这不仅仅是民主状况，更是自由和生命被掠夺，是违反宪章的行为。全球自爆发疫情开始，没有采取任何治疗手段，只是强制推行疫苗。尽管有数据报告和科学家的研究表明，接种疫苗既不能产生有效的抗体，又不能阻止新冠病毒的传播，但是各国政府依然强制推进，甚至动用警察和部队的力量，以解雇、实施疫苗护照等手段强迫民众接种试验性疫苗，各国不断爆发政府和民众之间的冲突，示威抗议不断。自民主国家成立以来，从来没有出现过政府和民众如此对立的情况。根源就在于中共，解决了根源，恢复原有的民主和赋予威权国家民主和自由，世界才能恢复正常秩序，自由民主不再是一句口号。
 
-而单伟建在被下放到内蒙古的戈壁滩上时，依然能“幸运”的收听敌台《美国之音》的英语900句栏目。1975年，这位在戈壁滩上的知青，又“幸运”的将信件投递到了中南海，那封改变其人生的“幸运信”到达了毛泽东和周恩来的手里……
+新闻参考链接：[https://www.voachinese.com/a/democracy-index-2021-20220209/6435993.html](https://www.voachinese.com/a/democracy-index-2021-20220209/6435993.html)
 
-可以说，单伟建的每一步都“幸运”的踩中了历史的音符。1975年，距离尼克松总统访华已过去3年，中美关系日渐向好。1979年，中美建交之际，单伟建成为了第一批公派出国的人员。自此单伟健完成了人生的华丽转身，真正地走出戈壁。
+编辑：胖丁
 
-单伟健深知要想最快融入西方文明社会，法律是必须的一步。他从法律领域入手，金融、媒体界同时进行，在这三个领域中构建了强大的网络体系，也完成了从公派学者到间谍身份的转变。
+* * *
 
-**钱从哪里来？**
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-单伟健的基金号称450亿美元，在英国也拥有数个上市公司，据称也都是百亿美元级别。2019年单伟健的儿子单博在美国洛杉矶以2000万美金全现金买入豪宅，引起市场震惊。据悉，单博也是一家与PAG关联的“GOBI资本”的实控人。
 
-一个来自中共国的红色留学生，用四十余年的时间便积累了大量的财富，不可谓不成功，或许幸运之神一直在眷顾着他，但回头看单伟建的金融之路，却与中共高层的关系相当密切。
+编辑：【英国伦敦喜庄园编辑部】
 
-单伟健先是以合伙人身份加入新桥资本，用5亿美元获取了韩国第一银行51%的股权，后带领新桥团队入主深圳发展银行，成为首例收购中共国上市商业银行的外资机构。2005年，单伟建开始重组深圳发展，改组并控制董事会，而王岐山的亲信康典则出任监事长。2010年5月4日，新桥与平安集团股权转让获监管部门通过。同年6月1日，单伟建从德太投资集团离职，在6月21日出任太盟投资集团（PAG）董事长兼首席执行官。2020年入选了该年度的“中国最具影响力的30位投资人”的榜单。
-
-单伟健的财富帝国也远远不止平安集团和PAG，上面这个例子就是证明单伟健的财富起家来自于中共高层的支持，而他的角色也是这些高层的白手套之一。
-
-“**幸运****”间谍终有时**
-
-随着时间的推移和金钱的积累，从律政界到金融界再到媒体界都逃不过单伟健“幸运”之手，很快便完成了对于HBO老牌媒体以及后期对Vice Media的投入和控制。
-
-2017年始，这些投入变得尤为重要。爆料革命、新中国联邦创始人郭文贵先生对中共“蓝金黄”手段和中共高层巨额贪腐的曝光，引发了中共高层的恐慌和担忧，而单伟建也从一个金融家的角色，渐渐走到前台，替中共消除正义的声音。
-
-太平联盟PAG是单伟健执行中共针对西方政治、法律渗透的桥头堡，通过行贿输送利益，控制美国的律师，法官及家人。并通过合同造假，签名造假，炮制博讯案、马蕊强奸案和PAG案等案子，发起了针对郭文贵先生多达60多起的法律缠诉。
-
-无论是强奸马蕊案、博讯案，还是各类伪民运案件，以及盘古担保融资等等一系列的诉讼，背后的资方都是单伟建担任主席的太平联盟（PAG）。甚至在2022年新年伊始，为了配合太平联盟（PAG）对郭先生缠诉的进程，vice不惜通过编辑视频，用造假的方式对于华人、尤其是郭先生制造不利的舆论环境。
-
-自此，单伟健露骨的间谍执行手段，方才引起国际社会的重视。相信无论怎样的“幸运”和“机缘巧合”，都很难让这位走出戈壁的“幸运”间谍独善其身了。
-
-参考链接：
-[https://www.prfree.org/@astralsoul/weijian-shan-the-chairman-and-ceo-of-pacific-alliance-group-pag-is-communist-china-s-high-ranking-spy-money-laundering-criminal-b7kx64ep7kry](https://www.prfree.org/@astralsoul/weijian-shan-the-chairman-and-ceo-of-pacific-alliance-group-pag-is-communist-china-s-high-ranking-spy-money-laundering-criminal-b7kx64ep7kry)
-
-编辑：文顺
-发布：爱放飞
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
