--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,62 +1,35 @@
 ---
-title: 安德鲁•G•胡夫博士致信维克参议员关于彼德•达萨克的举报信
+title: 加拿大将寻求加入欧盟的行列应对中共国对立陶宛贸易争端的挑战
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1987577/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/1987617/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2114.gif)
+翻译：冰糖葫芦喵
 
+编辑与校对：冰糖葫芦喵、灭共文明
 
+**《路透社》2月10日报道，周四，加拿大全球事务部在一份声明中表示，加拿大将寻求加入英国、美国和澳大利亚的行列，就中共国在世界贸易组织对立陶宛的贸易限制的争端解决磋商。**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/加拿大欧盟-e1644548407150.jpg)欧盟与加拿大签署自由贸易协定（图片来源：网络）
+在该声明中，加拿大对中共国最近针对立陶宛和欧盟具有立陶宛成分的商品和服务采取的贸易行动感到担忧，这可能会破坏基于规则的国际贸易体系及其机构。
 
-安德鲁•G•胡夫（Andrew G. Huff）博士，理科硕士
-揭发人/生态健康联盟（EcoHealth Alliance）前任数据与技术副主席 
-——————————————————————————————————————————————
- 2022年2月8日
+**1月27日，欧盟就中共国针对立陶宛采取的“歧视性贸易”做法向世贸组织提起诉讼，**并向总部设在日内瓦的贸易机构发起挑战，指责中共国对立陶宛的歧视性贸易行为，称其威胁到欧盟单一市场的完整性。
 
-致：尊敬的罗杰•F•维克
-美国参议院揭发人委员会资深成员
-华盛顿特区德克森街555号参议院办公楼
+此前，立陶宛允许民主台湾在维尔纽斯开设事实上的大使馆之后，中共国已经降低了与立陶宛的外交关系，并向跨国公司施压，要求它们切断与这个拥有280万人口的波罗的海国家的联系。
 
-亲爱的维克参议员：
+报道中称，在世贸组织的挑战中，双方有60天的时间进行协商，以达成解决方案。如果没有达成任何协议，欧盟可以选择发起正式的争端，成立一个世贸组织小组来研究其对中共国的主张。
 
-本人名叫安德鲁•G•胡夫博士，是生态健康联盟的前任数据与技术副主席。我是主管与新发传染病相关的数据分析和技术开发工作的高级管理人员，涉及大量由政府资助的合同。为该工作提供资金的包括各种机构：国防部、国防威胁减少局、高级情报研究计划署、美国国际开发署（中情局）、国立卫生研究所、美国农业部，还有许多其他政府与非政府的赞助机构（惠康基金会、史密森尼学会、谷歌）。我也是”预言（PREDICT）项目” （苏丹约旦）的国家协调人，我们通过该项目在全球搜寻新型冠状病毒。此外，我还是建模与分析团队的高级成员，还担任联合国的顾问。
+**加拿大政府表示，它反对 “经济胁迫”，并与世贸组织的 “志同道合的伙伴一起支持基于规则的国际贸易”。**
 
-我参与所有的行政领导会议。在这些会议中，我们会讨论机构组织策略、项目开发、项目管理、财务、预算、人事、以及与生态健康联盟的经营管理相关的其他事务。我以博士级新发传染病科学家和流行病学家的身份参与该机构的多个项目，并为多个项目提供咨询。我还审阅了许多该机构撰写的建议书。
+评论：
 
-作为揭发人，我的指控已发送给以下人士和机构：
-情报界                  监察长办公室
-美国农业部            监察长办公室
-国立卫生研究所  监察长办公室
-美国国际开发署    监察长办公室
-国防部                  监察长办公室
-国防威胁降低局    监察长办公室
+一直以来，**加拿大**在对中共的态度上表现比较软弱，但是**这次也同欧盟一起站在了对抗中共霸凌的一方。这充分表明，中共在国际上遭遇空前孤立。**
 
-2021年下旬，我以一个重要证人的身份挺身揭发生态健康联盟内部存在大量不道德甚至违法的行为。该机构与武汉病毒研究所合作，资助开发SARS-COV2病毒，即众所周知的COVID-19病毒。
+**加拿大作为民主国家会本能的站在公平贸易、反对贸易霸凌和经济胁迫，维护国际公认的贸易准则，发对秩序的破坏者。**
 
-生态健康联盟参与对美国政府实施诈骗（工时记录诈骗，合同报销欺诈）。发现且知晓这些严重的问题后，我提请彼德•达萨克（Peter Daszak）博士、阿列克谢•查木拉（Aleksei Chamura）博士和财务总监哈维•卡斯旦（Harvey Kasdan）予以关注。在一个会议上我提出相关议题，哈维•卡斯旦下班回家后即因心脏病发作而死亡。
+新闻链接：
 
-彼德•达萨克博士于2015年末及2016年初向我透露他正在与中情局合作。我持有可以证明生态健康联盟当时正在与情报系统合作的文件，也把它们发布在推特上且分享给多位记者。这些文件包括由彼德•达萨克博士撰写并提交的InQTel推销平台，以及由本人撰写的高级情报研究计划署报告。
-
-管理团队公开讨论了在中国进行的功能增强研究工作，我本人出于多个显而易见的原因提出反对（主要是这样等于培训中国共产党研制生物武器，还有知识产权盗窃的问题）。
-
-生态健康联盟和国外的实验室没有采取足够的管控措施以确保适度的生物研究安全、生物防控安全和风险管理水平，最终导致武汉病毒研究所发生实验室泄漏。实际上，我在一个行政项目规划会议上提出过这些忧虑，会上达萨克博士迅速驳斥了我的观点。这一信息可从美国驻中国领事馆与国务院的往来电报中得到证实。仍而，这种情况并不限于中国。
-
-生态健康联盟在国立卫生研究所、国立过敏与传染病研究所和安东尼•福奇博士为该项目拨款之前就与武汉病毒研究所和北卡罗莱纳大学的拉尔夫•巴里克（Ralph Baric）博士合作进行功能增强研究。我已经在推特上并向媒体发布了能证明这一指控的文件。
-
-生态健康联盟，还有世界上的许多顶级科学家，在获得拨款前就开始工作，以确保完成相关研究。这在学界是司空见惯的，也正因此那些顶级科学家才得以收集到必要的“基础数据”，从而在激烈拨款竞争中胜出，获得资金。通常，第一年的工作在获得资金前就几乎或已经全部完成。在生态健康联盟，我们通常会提前开始工作。这是一个重要的事实，因为在生态健康联盟发送给国防部高级研究计划局的《拆弹项目（DEFUSE）拨款提案》中明确描述了由中国研究人员自2019年9月开始进行的有可能导致SARS-COV2病毒意外或有意泄漏的功能增强研究。这显示由生态健康联盟撰写并提交给国防部高级研究计划局的《拆弹项目提案》中所描述的工作在该机构作出拨款决定之前就已经在积极进行中。
-
-彼德•达萨克博士可能是一个代表中国政府的双面间谍。这是基于我对他的行为以及对他为与中国人员合作在中国进行功能增强研究或其他高风险的实验室工作（没有看到风险、令人担忧的事项、或其他明显的问题）所作陈述的观察。对于一位必须对董事会、公司、和员工负责的总裁，这种做法是非常荒唐的。
-
-期待为这些令人遗憾的事实陈述宣誓作证，本人悉从尊便。
-
-敬上
-
-安德鲁•G•胡夫博士，理科硕士
+[Canada seeks to join EU challenge against China at WTO | Reuters](https://www.reuters.com/world/europe/canada-seeks-join-eu-challenge-against-china-wto-2022-02-10/)
 
 
-
-**编译：Boredbug
-校对：sherryok（水云间）
-上传排版：V在途中**
 
  
 
