--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,53 +1,49 @@
 ---
-title: 匈牙利科学家通过基因序列发现中共病毒实验室来源又一证据
+title: 澳大利亚支持立陶宛应对中共国“武器化”经济制裁
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1986746/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1987276/)
 
-翻译播报：billwilliam
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-校对：Ermat
-![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-6.png)图源：7news.com.au
-据《每日邮报》2月10日报道，匈牙利科学家从被污染的南极土壤样本细菌DNA序列中意外发现类似中共病毒（新冠）的序列。因为这些DNA序列还含有仓鼠和猴子的基因，科学家认为这个证据证明中共病毒在实验室动物身上进行过改造。这个发现可能对病毒溯源有一定意义。
+翻译/编辑：文泓
 
-为了清楚描述事件的原委，本文首先理清时间点：
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/2-41.png)图片来源：Global Times
 
-2019年1月，中国科技大学的研究人员从南极的乔治国王岛（King George Island）收集12份土壤样本，用来分析企鹅身上的细菌。
 
-2019年11月，美国情报认为武汉病毒所三名工作人员出现类似中共病毒感染。
+当地时间2月7日，据美国广播公司新闻报道，立陶宛在堪培拉的新外交使团开幕之前，立陶宛外交部长加布里埃尔·兰茨贝吉斯在议会大厦会见了澳大利亚外交部长玛丽斯·佩恩。
 
-2019年12月，南极土壤样本被送至上海生工生物工程公司（Sangon Biotech）的实验室进行DNA测序。同时这个公司也为武汉病毒所提供基因测序服务。
+立陶宛作为一个欧洲小国，因其支持台湾的立场，目前正在努力应对中共政府对其实施的“武器化”经济制裁，澳大利亚已将其外交支持投向立陶宛。
 
-2019年12月或2020年初，可能是因为样本标识错误，南极土壤样本被另一个冠状病毒项目的样本混合、污染。因此基因测序数据既含有南极细菌基因序列，也含有冠状病毒序列。
+两国有一些关键的相似之处，立陶宛因与台湾的关系而受到中共国的贸易制裁；澳大利亚因提出中共病毒溯源调查，也遭遇了当前与中共国前所未有的贸易紧张局势。
 
-另一个样本含有变异的中共病毒以及仓鼠和猴子的基因，说明利用试验室动物对病毒进行测试。
+近年来，这两个国家都激怒了北京，中共政府针对两国出口产品和多行业实施了严厉的制裁和高额的关税，被称为“经济胁迫”。
 
-病毒学家认为这是中共病毒的一个变种。也有专家认为这是中共病毒最早的始祖，也就是蝙蝠冠状病毒和中共病毒之间的桥梁。
+去年，立陶宛政府允许台湾在首都维尔纽斯设立贸易办事处。
 
-2019年12月31日，中共国承认第一例中共病毒。
+此举激怒了北京，仅仅因为该办公室被允许使用“台湾”这个名称，而不是传统的“台北”——中共国在宣称对这个民主岛屿拥有主权的努力中要求使用“台北”这个名称。
 
-2020年初，含有中共病毒序列的数据被和南极土壤细菌基因序列一起上载到一个国际数据库。一年多时间并未引起注意。
+今年1月，欧盟（EU）宣布将中国告上世界贸易组织（WTO），因为中国开始阻止从立陶宛进口的产品以及与立陶宛有关的产品。
 
-2021年1月，匈牙利罗兰德大学（Lorand University）和兽医药大学（University of Veterinary Medicine）的科学家发现南极土壤样本含有微量的中共病毒始祖、以及仓鼠和猴子DNA。
+此后不久，澳大利亚申请加入世贸组织的案件，这是一个明确的信号，它在贸易争端中支持立陶宛。
 
-2021年12月23日，匈牙利科学家发表预印本论文，警告污染的样本可能指向中共病毒起源。
+“**在相当长的一段时间里，澳大利亚是中国将经济和贸易作为一种政治工具，或者甚至可以说是一种政治武器的主要例子之一**，”兰茨贝吉斯先生在两国外长共同举行的新闻发布会上说。
 
-2022年1月，预印本论文发布后，数据库中基因序列被删除，之后数据又被恢复。
+“**现在立陶宛加入了这个专属俱乐部。但很明显，我们绝对不是最后一个成员**，尤其是，如果我们不用自己拥有的手段来阻止（中共国）这些做法。”
 
-中国科技大学的研究员否认曾删除或恢复数据。
+佩恩参议员表示，澳大利亚不考虑将其台北办事处更名为“台湾”，但将继续反对北京的行动。
 
-2022年2月，匈牙利科学家发表第二篇预印本论文，认为南极土壤样本被早期中共病毒污染。
+她说：“我和兰茨贝吉斯外长与许多同事一起工作和面对这些问题。”
 
-匈牙利科学家发现的证据是，被污染的土壤样本中含有早期中共病毒、以及仓鼠和猴子基因，这表明中共曾利用实验室动物或它们的细胞对中共病毒进行实验。而且来自上海的基因测序样本中，冠状病毒含有罕见的变异。
+新闻链接：[Australia backs Lithuania over ‘weaponised’ economic sanctions from China due to Taiwan ties](https://www.abc.net.au/news/2022-02-09/australia-backs-lithuania-china-economic-sanctions-taiwan-russia/100815812)
 
-匈牙利科学家当时在进行毫不相干的研究，检测南极土壤细菌DNA，但是偶然间发现序列含有病毒基因序列。可能是因为DNA测序仪发生故障，错误标识样本，导致土壤样本被从未见过的冠状病毒变异污染，也就是说两个不同研究项目的样本被错误混合在一起。上海生工生物工程公司同时也为武汉病毒所提供测序服务。
+*发布：tianzhihuan*
 
-匈牙利团队认为发现的病毒序列可能是最早的中共病毒始祖，如果样本污染发生在2019年12月。同时，匈牙利团队称，他们指出样本污染后，中共国研究人员曾删除数据，虽然之后又恢复数据。中共国曾删除早期武汉中共病毒感染者的关键数据，并对质疑官方说法的中国科学家噤声。这种国家主导的掩盖真相行为导致外界质疑病毒大流行起源。
-
-郭文贵先生很早就爆料中共病毒是共产党故意投放的生物武器，是实验室人工改造的病毒。这个大家都知道。只是现在匈牙利科学家通过一个偶然的事故找到又一个病毒最早实验室来源的证据。
-
-新闻来源：
-
-[https://www.dailymail.co.uk/news/article-10497629/The-early-Covid-mutations-Chinese-lab-fuelling-leak-theory.html](https://www.dailymail.co.uk/news/article-10497629/The-early-Covid-mutations-Chinese-lab-fuelling-leak-theory.html)
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
