--- a/gnews/57.md
+++ b/gnews/57.md
@@ -1,23 +1,27 @@
 ---
-title: 日本要求返日冬奥会选手接受手机安全检查
+title: 被中共篡改的历史：朝鲜战争二三事
 ---
-`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1981448/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/1981449/)
 
-作者：银河系农场—骄子
+作者：纽约香草山农场教育部-马克文/朱丽叶
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/1-GTV-Gnews-HEADER-8.png)
-美国前国务卿彭佩奥称，中共强制参加冬奥会的运动员使用一次性手机，目的为搜集信息。对于资讯安全的部分，日本体育厅2月8日表示，日本参加北京冬奥会的代表团成员将在返日后接受移动设备检查，他们担心中共冬奥会强制使用的应用程序My2022可能会构成安全风险。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture0-22.jpg)
-日本体育厅表示，安全专家将筛选安装了北京奥运会官方应用程序My2022的设备，并在必要时删除可疑应用程序，所有这些都须经手机所有者许可。同时日本体育厅希望向参加3月4日北京残奥会的日本代表团提供移动设备。日本体育厅及国家网络安全和战略中心都将提供咨询服务。
+中国共产党的历史应该被称为伪历史。中共对于自己的不光彩历史，一般都极力掩盖，利用独裁统治，掌控宣传工具，对老百姓进行洗脑教育。
 
-此前，日本政府曾敦促那些前往中共参加比赛的人专门为My2022应用程序准备替代设备，将使用量降至最低，并在离开中共国后删除该程序。
+中共把自己在朝鲜战争中的角色说成是“抗美援朝” “保家卫国”。但中1951年2月1日，联合国大会以44票赞成、7票反对和9票弃权，通过了一项名为“中华人民共和国中央人民政府干涉朝鲜”的提案，在该提案中，中共的志愿军被定义为入朝的外国军队中唯一的侵略者。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Capture0-23.jpg)
+战后几十年，中共一直对老百姓隐瞒志愿军的伤亡数字，只是极力宣传所谓的几位战斗英雄。很长一段时间，大陆百姓一直认为中共志愿军在朝鲜战场上几乎没有伤亡。直到2010年，一些历史资料才公布：中朝军队死伤超过100万人，其中志愿军阵亡超过18万人。
 
-据悉，包括英国和美国在内的七个西方国家此前都曾呼吁他们的运动员不要随身携带个人智能手机，目前，共有约1000名运动员和教练计划丢弃他们在中共冬奥会上使用过的手机。
+中共选择入朝作战的志愿军队伍中，大多数都是前国民党的投降部队，中共借战争机会消灭了大量未来很能出现的异己。战争结束后，被俘虏的志愿军数万人选择去了台湾，受到台湾当局欢迎，在生活上也得到了很好的安排。而回国的被俘志愿军则受到了严格审查，很多人被打成叛徒定罪。之后几十年，从来没有在新闻媒体上再看见这些志愿军俘虏。
 
-参考链接：[日本要求返日冬奥会选手接受手机安全检查](https://english.kyodonews.net/news/2022/02/4372eb10123a-returning-japan-olympians-to-have-smartphones-undergo-security-check.html)
+参考链接：
+1. [被中共篡改的历史：朝鲜战争二三事](https://zh.wikipedia.org/wiki/%E6%9C%9D%E9%B2%9C%E6%88%98%E4%BA%89)
+2. [被中共篡改的历史：朝鲜战争二三事](http://www.siwapu.com/junshi/24088.html)
+
+
 
 ![This image has an empty alt attribute; its file name is calendar.png](https://assets.gnews.org/wp-content/uploads/2022/02/calendar.png)
 
-总编：飞虹
+总编：Jack Li文阳
 编辑：飞虹
 校对/发稿：Hetangyuese
 
